// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "char": Object {
    "height": 0,
    "width": 0,
  },
  "cols": 100,
  "rows": 25,
  "terminal": Object {
    "height": 0,
    "width": 0,
  },
}
`;

exports[`Terminal plugin cmd plugin should move cursor 1`] = `
Array [
  5,
  26,
  46,
  25,
  4,
]
`;

exports[`Terminal plugin cmd plugin should move cursor 2`] = `
Array [
  3,
  33,
  64,
  93,
  88,
  57,
  27,
]
`;

exports[`Terminal plugin events enter text text should appear and interpreter function should be called 1`] = `"<span data-text=\\">&nbsp;foo\\">&gt;&nbsp;foo</span>"`;

exports[`Terminal plugin jQuery Terminal methods generic import/export view should import view 1`] = `"<div data-index=\\"0\\"><div style=\\"width: 100%;\\"><span data-text=\\"Hello&nbsp;World!\\">Hello&nbsp;World!</span></div></div><div data-index=\\"1\\" class=\\"terminal-command\\" role=\\"presentation\\" aria-hidden=\\"true\\"><div style=\\"width: 100%;\\"><span data-text=\\">&nbsp;foo\\">&gt;&nbsp;foo</span></div></div><div data-index=\\"2\\" class=\\"terminal-command\\" role=\\"presentation\\" aria-hidden=\\"true\\"><div style=\\"width: 100%;\\"><span data-text=\\">&nbsp;bar\\">&gt;&nbsp;bar</span></div></div>"`;

exports[`Terminal plugin prompt should format prompt 1`] = `"<span style=\\"font-weight:bold;text-decoration:underline;color:#fff;--color:#fff;--original-color:#fff;\\" data-text=\\">>>\\"><span style=\\"width: 3ch;\\">&gt;&gt;&gt;</span></span><span data-text=\\"&nbsp;\\"><span style=\\"width: 1ch;\\">&nbsp;</span></span>"`;

exports[`Terminal plugin prompt should format prompt 2`] = `"<span style=\\"font-weight:bold;text-decoration:underline;color:#fff;--color:#fff;--original-color:#fff;\\" data-text=\\">>>\\"><span style=\\"width: 3ch;\\">&gt;&gt;&gt;</span></span><span data-text=\\"&nbsp;\\"><span style=\\"width: 1ch;\\">&nbsp;</span></span>"`;

exports[`Terminal plugin prompt should return prompt 1`] = `"<span data-text=\\">>>&nbsp;\\"><span style=\\"width: 4ch;\\">&gt;&gt;&gt;&nbsp;</span></span>"`;

exports[`Terminal plugin prompt should set prompt 1`] = `"<span data-text=\\"|||&nbsp;\\"><span style=\\"width: 4ch;\\">|||&nbsp;</span></span>"`;

exports[`Terminal plugin prompt should set prompt 2`] = `"<span data-text=\\">>>&nbsp;\\"><span style=\\"width: 4ch;\\">&gt;&gt;&gt;&nbsp;</span></span>"`;

exports[`Terminal plugin terminal create / terminal destroy should have default prompt 1`] = `"<span data-text=\\">&nbsp;\\"><span style=\\"width: 2ch;\\">&gt;&nbsp;</span></span>"`;

exports[`Terminal utils $.terminal.format should create html span tags with style and classes 1`] = `"<span style=\\"font-weight:bold;text-decoration:underline line-through;font-style:italic;color:#fff;--color:#fff;--original-color:#fff;text-shadow:0 0 5px #fff;background-color:#000;--background:#000;\\" data-text=\\"Foo\\"><span>Foo</span></span><span style=\\"font-style:italic;\\" class=\\"foo\\" data-text=\\"Bar\\"><span>Bar</span></span><span style=\\"text-decoration:underline line-through overline;\\" data-text=\\"Baz\\"><span>Baz</span></span>"`;

exports[`Terminal utils $.terminal.format should filter out attribute in JSON 1`] = `"<span title=\\"foo\\" data-text=\\"foo\\"><span>foo</span></span>"`;

exports[`Terminal utils $.terminal.format should handle JSON 1`] = `"<span title=\\"foo\\" data-foo=\\"bar\\" data-text=\\"foo\\"><span>foo</span></span>"`;

exports[`Terminal utils $.terminal.format should handle emails 1`] = `"<a href=\\"mailto:jcubic@onet.pl\\" tabindex=\\"1000\\" data-text>jcubic@onet.pl</a>"`;

exports[`Terminal utils $.terminal.format should handle emails 2`] = `"<a href=\\"mailto:jcubic@onet.pl\\" tabindex=\\"1000\\" data-text>j</a><a href=\\"mailto:jcubic@onet.pl\\" tabindex=\\"1000\\" data-text>cubic@onet.pl</a>"`;

exports[`Terminal utils $.terminal.format should handle wider characters without formatting 1`] = `"<span style=\\"width: 24ch\\" data-text=\\"ターミナルウィンドウは黒\\"><span style=\\"width: 24ch\\"><span style=\\"width: 2ch\\">タ</span><span style=\\"width: 2ch\\">ー</span><span style=\\"width: 2ch\\">ミ</span><span style=\\"width: 2ch\\">ナ</span><span style=\\"width: 2ch\\">ル</span><span style=\\"width: 2ch\\">ウ</span><span style=\\"width: 2ch\\">ィ</span><span style=\\"width: 2ch\\">ン</span><span style=\\"width: 2ch\\">ド</span><span style=\\"width: 2ch\\">ウ</span><span style=\\"width: 2ch\\">は</span><span style=\\"width: 2ch\\">黒</span></span></span><span style=\\"width: 4ch\\" data-text=\\"です\\"><span><span style=\\"width: 4ch\\"><span style=\\"width: 2ch\\">で</span><span style=\\"width: 2ch\\">す</span></span></span></span>"`;

exports[`Terminal utils $.terminal.format should merge color style with style attr 1`] = `"<span style=\\"color:green;--color:green;--original-color:green;--size: 2\\" data-text=\\"Foo\\"><span>Foo</span></span>"`;

exports[`Terminal utils $.terminal.format should not allow attributes 1`] = `"<span data-text=\\"foo\\"><span>foo</span></span>"`;

exports[`Terminal utils $.terminal.format should not duplicate and don't overwrite data-text 1`] = `"<span data-text=\\"foo\\"><span>foo</span></span>"`;

exports[`Terminal utils $.terminal.format should not duplicate and don't overwrite data-text 2`] = `"<span data-text=\\"foo\\"><span>foo</span></span>"`;

exports[`Terminal utils $.terminal.format should parse JSON if semicolon in value 1`] = `"<span title=\\"foo ; bar\\" data-text=\\"foo\\"><span>foo</span></span>"`;

exports[`Terminal utils $.terminal.format should skip empty parts 1`] = `"<span data-text=\\"x\\">x</span><span style=\\"font-weight:bold;\\" data-text=\\"y\\"><span>y</span></span><span style=\\"font-weight:bold;\\" data-text=\\"z\\"><span>z</span></span>"`;

exports[`Terminal utils $.terminal.from_ansi should convert ansi to terminal formatting 1`] = `"[[;#5555FF;]Hello][[;#640000;#0AA]Foo][[biu;#44D544;#A0A]B[[sb;;]a]r][[;#000;#AAA]Baz][[;#006400;#ffff00]Quux]"`;

exports[`Terminal utils $.terminal.from_ansi should convert ansi to terminal formatting and escape the remaining brackets 1`] = `"[[;#5555FF;]Hello][[;#640000;#0AA]Foo][[biu;#44D544;#A0A]B&#91;&#91;sb;;&#93;a&#93;r][[;#000;#AAA]Baz][[;#006400;#ffff00]Quux]"`;

exports[`Terminal utils $.terminal.from_ansi should format plots with moving cursors 1`] = `
"  Y Axis                  Foo: [[;#A00;]#]
                                   
                                   
                                   
                                   
                                   
                                   
                                   
   A                               
 10|                               
   |                               
  8|         [[;#A00;]#]                     
   | [[;#A00;]#] [[;#A00;]#]       [[;#A00;]#]
  6|     [[;#A00;]#]
   |       [[;#A00;]#]
  4|
   |
  2|
   |
   +---+---+---+---+---+----+----+----+-> X Axis
   0   2   4   6   8   10   12   14   "
`;

exports[`Terminal utils $.terminal.from_ansi should format plots with moving cursors 2`] = `
"  Y Axis                  A: [[;#A00;]*] | B: [[;#00A;]# ] | C: [[;#AAA;#0AA]  ]
                                   
                                   
                                   
                                   
                                   
                                   
                                   
                                   
                                   
                                   
     [[;#A00;]*] [[;#A00;]*] [[;#A00;]*] [[;#A00;]*] [[;#A00;]*] [[;#A00;]*]                   
                 [[;#A00;]*]
                   [[;#A00;]*]
                     [[;#A00;]*]
                       [[;#A00;]*]
                         [[;#A00;]*]
                           [[;#A00;]*]
                             [[;#A00;]*]
                               [[;#A00;]*]
   A                             [[;#A00;]*]
 10|           [[;#AAA;#0AA]  ]                  [[;#A00;]*]
   |   [[;#00A;]# ][[;#00A;]# ]
  8|   [[;#00A;]# ][[;#00A;]# ]
   |
  6|
   |
  4|
   |
  2|
   |
   +---+---+---+---+---+----+----+----+-> X Axis
   0   2   4   6   8   10   12   14   "
`;

exports[`Terminal utils $.terminal.from_ansi should render ANSI art 1`] = `
"


                                 [[b;#555;#000]▄]▄▄▄▄▄[[b;#555;]▄  ▄]▄▄▄▄[[b;#555;]▄]
                          [[b;#555;]▄]▄▄▄[[b;#FFF;#AAA]░▒▓█]▀▀▄▄▄[[b;#FFF;#AAA]░▒▓█▓▓▓▓▒▒]▄[[b;#555;]▄]
                      [[b;#555;]▄]▄[[b;#FFF;#AAA]░▒▓▓██]▀▀▄▄[[b;#FFF;#AAA]░▒▓████████▓▓▓▓▓▒░]▄
                    ▄[[b;#FFF;#AAA]░▒▓██▒]▀▀▄[[b;#FFF;#AAA]░▒▓█████████████████▓▓▓▒]▄
                 [[b;#555;]░]▄[[b;#FFF;#AAA]░▒▓██]▀▄▄[[b;#FFF;#AAA]▄▄▀▀][[;#555;#AAA]▄▄][[;#FFF;#AAA]░▒▓████████████████▓▓▓▒]▄
                ▄[[b;#FFF;#AAA]░░▒▓██▓][[;#555;#000]▄▀][[;#FFF;#AAA]▒▓][[;#555;#AAA]▄][[;#555;#000] ░  ▀]▀[[b;#FFF;#AAA]░▒█████████████████▓▓▓▒]▄
              [[b;#555;]░]▄[[b;#FFF;#AAA]░▒▓████▒][[;#555;#AAA]▒][[;#555;#000]▌▐][[;#FFF;#AAA]▒▓][[;#555;#AAA]▀][[;#555;#000]   ░  ▀]▀[[b;#FFF;#AAA]░▒▓▓██████████████▓▓▓]▓
             [[b;#555;]░][[;#FFF;#AAA]░░▒▓█████▒][[;#555;#000]▓ ░][[;#FFF;#AAA]▒▓]▌ [[b;#555;]░░░]    [[b;#555;]▀]▀▀[[b;#FFF;#AAA]▒▓▓██████████████▓▓░]░
            [[;#555;]░][[;#FFF;#AAA]░▒▓]▀[[b;#FFF;#AAA]▓▓███▓▒][[;#555;#000]░  ][[;#FFF;#AAA]▒█][[;#FFF;#000] ][[;#555;#000]▄][[;#555;#AAA]▀▀▀▒][[;#555;#000]▄▄▒▒  ▀]▀▀[[b;#FFF;#AAA]▒▓▓████████████▓▓▒]▒
           [[b;#555;]░][[;#FFF;#AAA]░░]▀▄[[b;#FFF;#AAA]░▓████▓▒][[;#555;#AAA]▀][[;#555;#000]▄▐][[;#FFF;#AAA]▒][[;#FFF;#000] ][[;#555;#AAA]▒][[;#FFF;#AAA]░░▒▓▓▄▓▓░][[;#555;#AAA]▀▀▀][[;#555;#000]▄ ▀]▀▀[[b;#FFF;#AAA]▒▓█▓█████████▓▓▓]▓
           ▐▌▀▄[[b;#FFF;#AAA]░▓██████▓░▒░]▌[[b;#555;]▐][[;#FFF;#AAA]░▓▓▓████████▓░][[;#555;#AAA]▀▀][[;#555;#000]▄ ▀]▀[[b;#FFF;#AAA]░▒▓█▓█████▓▓▓▓▓]▒░
          [[b;#555;]░][[;#555;#AAA]░][[;#555;#000] ][[;#FFF;#AAA]░░▓█████████▒▒][[;#FFF;#000] ][[;#FFF;#AAA]░▓████████████▓▓░░][[;#555;#AAA]▀▀][[;#555;#000]▄ ]▀▀[[b;#FFF;#AAA]░▒▓▓▓▓▓▓█▓▓░▓]▒▒
          ▐[[b;#555;#AAA]░]▐[[b;#FFF;#AAA]░▓█████████▓▒][[;#FFF;#000] ][[;#555;#AAA]▒][[;#FFF;#AAA]▓█████████████▓▓▒][[;#555;#000]▀▀█][[;#FFF;#AAA]░][[;#555;#AAA]▓][[;#555;#000]▄▄▀]▀▀[[b;#FFF;#AAA]░▒▓▒▒▓▓█▓ ▓]▓▒
         [[b;#555;]░][[;#555;#AAA]░▒][[;#555;#000] ][[;#FFF;#AAA]▓███████▓▓▒]▀ [[b;#555;#AAA]▒][[;#FFF;#AAA]░▓███████████▓▓░]▀ ▄[[b;#FFF;#AAA]░]▄[[b;#555;]▄▀▀▀][[;#555;#AAA]▓][[;#555;#000]░  ▀▀]▀▀[[b;#FFF;#AAA]░░▓▓█░][[;#FFF;#000] ]▓░
         ▐[[b;#555;#AAA]░▓][[;#555;#000] ][[;#FFF;#AAA]▒██████▓▒]▀ [[b;#555;]▄][[;#555;#AAA]▒][[;#FFF;#AAA]░▓██████████▓▀▄]▀[[b;#555;]▄][[;#555;#AAA]▀][[;#FFF;#AAA]▓▒▒▓█▄▄ ][[;#555;#000]▄▀▄]      [[;#555;#000]▀]▀[[b;#FFF;#AAA]▒▓▒]▌▐▓
        [[b;#555;]░][[;#555;#AAA]░▒][[;#555;#000]▌ ][[;#FFF;#AAA]░]▌[[b;#FFF;#AAA]████▓▒][[;#FFF;#000]  ][[;#555;#000]▀▄][[;#FFF;#AAA]░▒▓███████▓▀▓▓]▀[[b;#555;]▄][[;#555;#AAA]▀][[;#FFF;#AAA]░▒][[;#555;#AAA]▄][[;#555;#000]▓▀▀ ▀▀█][[;#555;#AAA]▓][[;#FFF;#AAA] ][[;#FFF;#000] ][[;#555;#000]▓]       [[;#FFF;#000]░][[;#FFF;#AAA]▒▓]█ [[b;#FFF;#AAA]▒]▄
        [[b;#555;]░][[;#555;#AAA]▒▓][[;#555;#000] ▐]▌▐█[[b;#FFF;#AAA]██▓▒][[;#FFF;#000]  ][[;#555;#000]░▀▄][[;#FFF;#AAA]░▒▓██▓▓▒▄▄█▒░░][[;#FFF;#000] ][[;#555;#AAA]▒][[;#FFF;#AAA]░][[;#555;#AAA]░▓][[;#555;#000]▀]       [[;#555;#000]░][[;#555;#AAA]▓][[;#555;#000]▌▐▓]      [[;#FFF;#000]░][[;#FFF;#AAA]▓]█[[b;#555;#AAA]░]▌░[[b;#FFF;#AAA]▒]░
        [[b;#555;]░][[;#555;#AAA]▒][[;#555;#000]█ ░ ]█[[b;#FFF;#AAA]██▓▒][[;#555;#000]░ ░▒][[;#555;#AAA]▓░][[;#FFF;#AAA]▒▓▓▄▄░]▀▀▀[[b;#555;]▀▀▀▓][[;#FFF;#AAA]▒]▌[[b;#555;]▐][[;#FFF;#AAA]░][[;#555;#AAA]░][[;#555;#000]▌]         [[;#555;#000]░][[;#555;#AAA]▓][[;#555;#000] ▓▒]     [[;#FFF;#000]░][[;#FFF;#AAA]▓]█[[b;#555;#AAA]▒][[;#555;#000]▌]▐[[b;#FFF;#AAA]▓░]
         [[;#555;#AAA]▓][[;#555;#000]▌░▒]▐[[b;#FFF;#AAA]██▒]▀   [[b;#555;]▒░][[;#555;#AAA]▓░]▀▀▄▄[[b;#555;]▄  ░  ░ ▀][[;#FFF;#AAA]░]▌[[b;#555;]▐][[;#FFF;#AAA]▒░][[;#555;#000]▌░]         [[;#555;#AAA]▒][[;#555;#000]▌▐▓▒  ░ ][[;#FFF;#000]▓][[;#FFF;#AAA]▒][[;#555;#AAA]▒▒][[;#555;#000]▌]▐▄▀▒
         [[b;#555;]▓▓▒▓]█[[b;#FFF;#AAA]▓▒]▀[[b;#555;]▄  ░▓▒▄ ][[;#555;#AAA]▓▓][[;#FFF;#AAA]░▓▓]▀▀▀[[b;#555;#AAA]▀][[;#555;#000]▄  ░▀][[;#FFF;#AAA]░][[;#FFF;#000] ][[;#FFF;#AAA]▒▓▒]▄[[b;#555;]░   ]▄[[b;#555;]■░▄][[;#FFF;#AAA]▀░][[;#555;#AAA]░][[;#555;#000]▄▀][[;#555;#AAA]▒][[;#555;#000]    ][[;#FFF;#000]▓]█[[b;#555;#AAA]▒▓][[;#555;#000] ][[;#FFF;#AAA]░░][[;#FFF;#000] ]▓
         [[;#555;]▐▓▓ ][[;#FFF;#AAA]▒▒░][[;#555;#000]▐][[;#555;#AAA]▓][[;#555;#000]▌   ][[;#555;#AAA]▓▓][[;#555;#000]▄░ ▀▄]▄[[b;#FFF;#AAA]▒▓▀▀▀][[;#555;#000]▀▄ ░][[;#FFF;#AAA]░][[;#FFF;#000] ][[;#FFF;#AAA]▀][[;#555;#000]▀][[;#FFF;#AAA]▀█▄▄▄▓▓▄▄█▓▓][[;#555;#AAA]░▓][[;#555;#000]▌▀▌░  ][[;#FFF;#AAA]▒][[;#555;#AAA]▒▒▓][[;#555;#000] ][[;#FFF;#AAA]░▒]▌▐░
          [[b;#555;]█  ][[;#FFF;#AAA]░]▀ [[b;#555;#AAA]▓▒▒][[;#555;#000] ░▐][[;#555;#AAA]▓][[;#FFF;#AAA]░][[;#555;#AAA]▓][[;#555;#000]▄ ░▀▀]▀▀[[b;#555;]▀▄]▄[[b;#FFF;#AAA]▒▓][[;#555;#AAA]░]▌▐ [[b;#555;]▌  ▀][[;#555;#AAA]▄][[;#FFF;#AAA]▀▀][[;#555;#AAA]▄][[;#555;#000]▀▀▀][[;#555;#AAA]▄][[;#FFF;#AAA]▒░][[;#555;#AAA]▒▒][[;#555;#000]▒ ░  ][[;#FFF;#000]░][[;#FFF;#AAA]▒][[;#555;#AAA]▒▓][[;#555;#000]▌]▐[[b;#FFF;#AAA]▒▓░]░░
          [[b;#555;]▐▌ ▐][[;#FFF;#AAA]▓][[;#FFF;#000] ][[;#555;#AAA]▒░░][[;#FFF;#AAA]▒][[;#FFF;#000]  ][[;#555;#AAA]▒][[;#FFF;#AAA]░][[;#555;#AAA]▒▓][[;#555;#000]▄ ░    ]▀[[b;#FFF;#AAA]▒▓█▒][[;#555;#AAA]▓][[;#555;#000]░]▌[[b;#555;]▐   ][[;#555;#AAA]▓][[;#555;#000]▀▀▄][[;#FFF;#AAA]░]█[[b;#555;]▓▄▀▀▀▄░    ][[;#FFF;]▒][[;#FFF;#AAA]░][[;#555;#AAA]▒▓][[;#555;#000]▌]░[[b;#FFF;#AAA]░█░]░
           [[;#555;]█▄ ][[;#FFF;#AAA]▒▓][[;#FFF;#000] ][[;#555;#AAA]░][[;#FFF;#AAA]▒▓▓][[;#FFF;#000] ][[;#555;#000]▀][[;#555;#AAA]░][[;#FFF;#AAA]░░][[;#555;#AAA]░][[;#555;#000]▄░ ▄]▄[[b;#FFF;#AAA]▒▓▓██▓][[;#555;#AAA]▒▓]▌[[b;#555;]▐▄  ▐][[;#FFF;#AAA]░▄░▒][[;#555;#AAA]░▒][[;#555;#000] ▓▓▒▒░ ░  ][[;#FFF;#000]▓][[;#555;#AAA]░▒▓][[;#555;#000] ][[;#FFF;#AAA]░█▓]░░
           [[b;#555;]▐▓▄▀][[;#FFF;#AAA]█▓][[;#FFF;#000] ][[;#FFF;#AAA]▓▓▓▒][[;#FFF;#000] ][[;#555;#000]▀][[;#555;#AAA]░░][[;#FFF;#AAA]░▄▒▓▓█▓████▓][[;#555;#AAA]░][[;#555;#000]█][[;#555;#AAA]░][[;#FFF;#000] ]█[[b;#555;#AAA]▀▀▀][[;#FFF;#AAA]▒▓▒▓][[;#555;#AAA]░][[;#555;#000]▌▓ ░░   ░ ][[;#FFF;#000] ][[;#FFF;#AAA]▒][[;#555;#AAA]▒▓][[;#555;#000]▌]▐[[b;#FFF;#AAA]░█░]░
           [[;#555;]▓▓▓▄▐][[;#FFF;#AAA]▓▓][[;#FFF;#000] ][[;#FFF;#AAA]▓█▓▒][[;#FFF;#000] ][[;#555;#000]▀][[;#555;#AAA]░]█[[b;#FFF;#AAA]░▓▓█▓████▓░][[;#555;#000]▀][[;#555;#AAA]░▓][[;#FFF;#000] ][[;#FFF;#AAA]░▒▓▓███][[;#555;#AAA]░▒▓][[;#555;#000] ░]      [[;#FFF;#000] ░]█[[b;#555;#AAA]▒▓][[;#555;#000] ][[;#FFF;#AAA]░█▓]░
          [[b;#555;]▐▓▀ ▀ ][[;#555;#AAA]░][[;#FFF;#AAA]▓][[;#FFF;#000] ][[;#FFF;#AAA]▒██▓▒][[;#FFF;#000] ][[;#555;#000]▀][[;#555;#AAA]░░]█[[b;#FFF;#AAA]▒▓▒▓▓█▓][[;#555;#AAA]▓][[;#555;#000]▌ ▄][[;#555;#AAA]▒]▄▀[[b;#FFF;#AAA]▀▀█▀]▀[[b;#555;]▀▀▄░▀▒░   ░ ][[;#FFF;] ][[;#FFF;#AAA]▒][[;#555;#AAA]▒▓][[;#555;#000]▌]▐[[b;#FFF;#AAA]░▓]▌
           [[b;#555;]▓▒   ][[;#555;#AAA]▓][[;#FFF;#AAA]▒▓][[;#FFF;#000] ][[;#FFF;#AAA]▒██▓▒][[;#FFF;#000] ][[;#555;#000]▀][[;#555;#AAA]▒░][[;#FFF;#AAA]░▒░▒▒▓]█[[b;#555;#AAA]▒▓▓▒░]██▄ ▀[[b;#555;]▄][[;#555;#AAA]▒▒][[;#555;#000]▀▀▄ ]▐[[b;#555;]▓]     [[;#FFF;]▒][[;#FFF;#AAA]░][[;#555;#AAA]▒▓][[;#555;#000] ][[;#FFF;#AAA]░▓░]
           [[;#555;]▐▓▌░ ▐][[;#FFF;#AAA]░░▓][[;#FFF;#000] ][[;#FFF;#AAA]▒██▓▒][[;#FFF;#000]  ][[;#555;#AAA]▒░][[;#FFF;#AAA]░░░]█[[b;#FFF;#AAA]░]█[[b;#555;#AAA]░░][[;#FFF;#AAA]░][[;#555;#000]█]▀[[b;#555;]▀ ]▄▌ ▀▄▄[[b;#FFF;#AAA]▒][[;#555;#000]▀ ]▄[[b;#FFF;#AAA]▒][[;#555;#AAA]░][[;#555;#000]▌░  ][[;#FFF;#000]░][[;#FFF;#AAA]▒][[;#555;#AAA]▒▓][[;#555;#000] ][[;#FFF;#000]▓][[;#FFF;#AAA]▓░][[;#555;#000]▀]
            [[;#555;#000]▀█▄▒ █][[;#555;#AAA]░][[;#FFF;#AAA]░▒][[;#FFF;#000] ][[;#FFF;#AAA]▒▓█▓▒]▄ [[b;#555;]▀][[;#555;#AAA]░░][[;#FFF;#AAA]░]████[[b;#FFF;#AAA]░][[;#555;#AAA]▀][[;#555;#000]▄ ▀]█[[b;#FFF;#AAA]▓▀][[;#FFF;#000] ][[;#555;#000]▀▀]▄▄[[b;#FFF;#AAA]░]█[[b;#FFF;#AAA]▒▓░][[;#555;#000]▓   ][[;#FFF;#AAA]▒][[;#555;#AAA]▒][[;#555;#000]▀]▄[[b;#FFF;#AAA]█▓░][[;#555;#000]▀]
              [[;#555;#000]▀█▄▐][[;#555;#AAA]░]█[[b;#FFF;#AAA]░][[;#FFF;#000] ][[;#FFF;#AAA]▒▓██▓▒░][[;#FFF;#000] ][[;#555;#000]▀][[;#555;#AAA]▒░][[;#FFF;#AAA]░]██[[b;#FFF;#AAA]░▓▒]██[[b;#555;]▀]▄▄▄▄ [[b;#FFF;#AAA]▒░▒]█[[b;#FFF;#AAA]▒▓][[;#555;#AAA]░][[;#555;#000]▓▀  ][[;#FFF;#AAA]▒][[;#555;#AAA]▒][[;#555;#000] ][[;#FFF;#000]▓][[;#FFF;#AAA]█▓░][[;#555;#000]▀]
                [[;#555;#000]▀▄][[;#555;#AAA]▓░][[;#FFF;#AAA]░]▐[[b;#FFF;#AAA]▒▓███▓▓▒]▄ [[b;#555;#AAA]▒░░][[;#FFF;#AAA]░]█[[b;#FFF;#AAA]▒░]█[[b;#555;]▀ ]▄[[b;#FFF;#AAA]█▓▓]▄▀[[b;#FFF;#AAA]▒▓█▓][[;#555;#AAA]░][[;#555;#000]▓░  ][[;#FFF;#AAA]▒][[;#555;#AAA]▒][[;#555;#000]▌]▐[[b;#FFF;#AAA]▓▓]▓░
                  [[b;#555;]░][[;#555;#AAA]▓]█[[b;#FFF;#AAA]░▒▓█████▓▒]▄ [[b;#555;]▀][[;#555;#AAA]▒░][[;#FFF;#AAA]░]███[[b;#FFF;#AAA]░▓█▓▒▓█]▄▀[[b;#FFF;#AAA]▒][[;#555;#000]▓▓▀   ][[;#FFF;#000]▄]█▀▄[[b;#FFF;#AAA]▓▒░][[;#555;#000]▀]▐
                   [[b;#555;]▓][[;#FFF;#AAA]░]█[[b;#FFF;#AAA]▒▓██████▓▒░][[;#555;#000]▄ ▀▀][[;#555;#AAA]▄▄▓][[;#555;#000]▄▀▀]▀[[b;#555;]▀▀]▀[[b;#555;]▀  ▀ ▄ ]▄[[b;#FFF;]▀]▀▄[[b;#FFF;#AAA]▓▓▒░][[;#555;#AAA]▄]▐▌
                  [[b;#555;]▄ ]▓[[b;#FFF;#AAA]▒▒▓█▀▀]▀▀[[b;#555;]▀ ▀]▀▀[[b;#555;]▀▀   ▀▀▓▓▓▄▄▄▀▀ ▀  ]▐[[b;#FFF;#AAA]▄▄█▓▓░░][[;#555;#AAA]▄] [[b;#FFF;#AAA]▓]
                  [[;#555;]░▄]░[[b;#FFF;#AAA]▒▓▓]▀ [[b;#555;]▄]▄[[b;#FFF;#AAA]▄][[;#FFF;#000]██][[;#FFF;#AAA]▄▄▄][[;#555;#AAA]▀][[;#555;#000]▄]         [[;#555;#000]▀▀▒▀▀] [[b;#555;] ]▄[[b;#FFF;#AAA]▒██▒░░░]▀ [[b;#FFF;]▐▌]
                 [[;#555;]▄ ▀▄]▀[[b;#FFF;#AAA]▒]▀ [[b;#555;#AAA]░][[;#FFF;#AAA]░▒▓][[;#FFF;#000]█████][[;#FFF;#AAA]▓▒][[;#555;#AAA]░░][[;#555;#000]▄ ░][[;#FFF;#000] ]     [[;#FFF;#000]   ]░▓[[b;#FFF;#AAA]▒█▓▒░][[;#555;#AAA]▄]▀  [[b;#FFF;]▐][[;#FFF;#AAA]▓]
          [[;#555;]▄▄██▓▓▓▓▒▄ ░]▀[[b;#555;]▄][[;#555;#AAA]░][[;#FFF;#AAA]▒▒▓███████▓▓▒][[;#555;#AAA]▒][[;#555;#000]▌][[;#FFF;#000]    ][[;#555;#000] ▄]▄▄▄  ░▀[[b;#FFF;#AAA]▓▒░]▀   [[b;#FFF;]▄][[;#FFF;#AAA]▓][[;#FFF;#000] ][[;#555;#000]▄]
        [[;#555;#000]▄][[;#555;#AAA]░░][[;#FFF;#AAA]▒░][[;#555;#000]▄ ▀▒▒░░  ▄][[;#555;#AAA]░][[;#FFF;#AAA]░▓▓][[;#FFF;#000]██████████][[;#FFF;#AAA]▓][[;#555;#AAA]░][[;#555;#000]▓][[;#FFF;#000] ][[;#555;#000]▄■][[;#FFF;#000]▄][[;#555;#AAA]▀▀][[;#FFF;#AAA]▀]▓░[[b;#FFF;]█]▀▄[[b;#FFF;#AAA]▓░░][[;#555;#000]▀][[;#FFF;#000] ]▄[[b;#FFF;]▄][[;#FFF;#AAA]▓▓][[;#555;#000]▀ ]▀[[b;#FFF;#AAA]░░]▄[[b;#555;]▄]
       [[b;#555;]▄][[;#555;#AAA]░][[;#FFF;#AAA]▒█▓▒░][[;#FFF;#000]   ][[;#555;#000]░░ ░ ][[;#555;#AAA]░][[;#FFF;#AAA]░▒▓][[;#FFF;#000]████████████][[;#FFF;#AAA]▒][[;#555;#000]▓░░▓][[;#555;#AAA]▓▒▒▓][[;#555;#000] ][[;#555;#AAA]░]█[[b;#555;#AAA]▀] [[b;#FFF;#AAA]░]▀▄[[b;#FFF;]▄][[;#FFF;#AAA]▓▒▒]▀ ▄[[b;#FFF;#AAA]░▒][[;#FFF;#000] ][[;#FFF;#AAA]░▒▒░]
      [[;#555;]▒░]▀[[b;#FFF;#AAA]░▓█▓▒░][[;#555;#000]▄]     [[;#555;#000]▐][[;#FFF;#AAA]░▒▓][[;#FFF;#000]█████████████][[;#FFF;#AAA]▓][[;#555;#000]▌][[;#FFF;#000]  ][[;#555;#000]▀][[;#555;#AAA]▓▓][[;#555;#000]▀▄][[;#555;#AAA]▓▓▓]▀▄▄[[b;#FFF;]█][[;#FFF;#AAA]░░▒]▀ ▄[[b;#FFF;#AAA]░▒▒▓][[;#FFF;#000]█ ][[;#FFF;#AAA]░▓▓░]
      [[;#555;]▓▄ ]▀[[b;#FFF;#AAA]▒▓█▓▒░░][[;#555;#000]▄  ░▐][[;#FFF;#AAA]░▓▓][[;#FFF;#000]████████████][[;#FFF;#AAA]▓][[;#555;#AAA]░][[;#555;#000]  ░]        [[b;#555;]▀▀▀][[;#555;#AAA]▒▓▓]▀▄[[b;#FFF;#AAA]░░▒▓][[;#FFF;#000]█▀][[;#555;#000]▄▌]▀[[b;#FFF;#AAA]░▓▒]▌
       ▀[[b;#555;#AAA]▓][[;#555;#000] ][[;#FFF;#AAA]░▒██▓▓▒░][[;#555;#000]▄  ]▐[[b;#FFF;#AAA]░▓][[;#FFF;#000]████][[;#FFF;#AAA]▄█][[;#FFF;#000]██████][[;#FFF;#AAA]▓][[;#555;#AAA]░][[;#555;#000]▌ ]    [[b;#555;]▄]▄▓▓  [[b;#555;]▄]     [[b;#555;]▀]█[[b;#FFF;#AAA]░]█[[b;#FFF;]▀▀][[;#555;]▄][[;#555;#AAA]▀▀][[;#FFF;#000] ]▄ ▀[[b;#FFF;#AAA]▓░]
        ▀ ▀[[b;#FFF;#AAA]░▓███▓░░][[;#555;#AAA]▓][[;#555;#000]░]▐[[b;#FFF;#AAA]░▓][[;#FFF;#000]███████████][[;#FFF;#AAA]▓][[;#555;#AAA]░][[;#555;#000]▌ ▐]▌▄  ▀[[b;#FFF;#AAA]░░▒▒▓][[;#FFF;#000] ]▄[[b;#FFF;]█][[;#FFF;#AAA]▓▓]▀  ▀[[b;#555;]▄▀][[;#555;#AAA]▀▀][[;#FFF;#AAA]▒▓░][[;#FFF;#000] ][[;#FFF;#AAA]▄]▄ ▀[[b;#FFF;#AAA]▒]
          ▀[[b;#FFF;#AAA]░░▓███▓░][[;#555;#AAA]▓][[;#555;#000] ]▐[[b;#FFF;#AAA]░▓][[;#FFF;#000]██████████][[;#FFF;#AAA]░][[;#555;#AAA]░][[;#555;#000]▀ ] [[b;#555;#AAA]▓][[;#555;#000] ][[;#FFF;#AAA]░▒][[;#FFF;#000]█]▄▀[[b;#FFF;#AAA]▓▓][[;#FFF;#000]▀]▄[[b;#FFF;]█][[;#FFF;#AAA]▓▒▓]▀[[b;#555;]▄][[;#555;#AAA]▀▀][[;#555;#000] ]▐[[b;#FFF;#AAA]░][[;#FFF;#000] ][[;#FFF;#AAA]▓][[;#FFF;#000]███][[;#FFF;#AAA]░]▄[[b;#FFF;]▀][[;#FFF;#AAA]▄][[;#FFF;#000] ]▀[[b;#FFF;#AAA]▒]
           [[;#555;]▀]▀[[b;#FFF;#AAA]░▓██▓░][[;#555;#AAA]▓][[;#555;#000] ][[;#555;#AAA]░][[;#FFF;#AAA]▓▓][[;#FFF;#000]█████████][[;#FFF;#AAA]░]▀ [[b;#555;]▄▄][[;#555;#AAA]▓▒][[;#FFF;#000] ][[;#FFF;#AAA]▒▓][[;#FFF;#000]██]▄  ▄[[b;#FFF;#AAA]░▒][[;#555;#AAA]▄]▀ ▄[[b;#FFF;#AAA]░▒▓]▌ ▐[[b;#FFF;#AAA]░][[;#555;#000]▄][[;#FFF;#000]▀████][[;#FFF;#AAA]░][[;#FFF;#000]█][[;#FFF;#AAA]▄]▄▀
            [[b;#555;]▀]▀[[b;#FFF;#AAA]░▓█▓░][[;#555;#000]▌ ][[;#FFF;#AAA]░▓][[;#FFF;#000]█████████][[;#FFF;#AAA]▒]▀ [[b;#555;#AAA]▓░][[;#FFF;#AAA]░▒]▌ [[b;#FFF;#AAA]▓][[;#FFF;#000]██]▀ ▄[[b;#FFF;#AAA]░▒]▀ [[b;#555;]▄]▄[[b;#FFF;#AAA]░▒▒▓▓▒]▄ ▀[[b;#FFF;#AAA]░▒▓][[;#FFF;#000]███████][[;#FFF;#AAA]▄]▄
               ▀[[b;#FFF;#AAA]░▓░][[;#555;#000]▌▐][[;#FFF;#AAA]░▓][[;#FFF;#000]████████][[;#FFF;#AAA]▓][[;#555;#AAA]░][[;#FFF;#000] ][[;#555;#AAA]▓▒][[;#FFF;#AAA]▒▒▒]▌ [[b;#FFF;#AAA]▓]▀ ▄[[b;#FFF;#AAA]▒]▀[[b;#555;]▀]  ▀[[b;#FFF;#AAA]░░▒▓▓][[;#FFF;#000]██][[;#FFF;#AAA]▓▒]▄ [[b;#555;]▀][[;#FFF;#AAA]░▒▓][[;#FFF;#000]███████][[;#FFF;#AAA]░]▄
                [[b;#555;]▀][[;#555;#AAA]▄▓][[;#555;#000] ]▐[[b;#555;#AAA]░][[;#FFF;#AAA]▓][[;#FFF;#000]███████][[;#FFF;#AAA]▓][[;#555;#AAA]░]▌[[b;#555;]▐][[;#555;#AAA]░][[;#FFF;#AAA]▒▓▓▒]▌▐[[b;#FFF;#AAA]▒][[;#FFF;#000] ][[;#FFF;#AAA]░▒][[;#555;#000]▀][[;#FFF;#000]▄][[;#555;#AAA]▄▄▄][[;#FFF;#000]▄][[;#555;#000]▀][[;#FFF;#AAA]▒▓][[;#FFF;#000]█████][[;#FFF;#AAA]▓▒]▄ [[b;#555;]▀][[;#FFF;#AAA]░▒▓][[;#FFF;#000]██████][[;#FFF;#AAA]▒░]█
                  [[b;#555;]▀ ]▐[[b;#FFF;#AAA]▒▓][[;#FFF;#000]██████][[;#FFF;#AAA]▓░][[;#555;#AAA]░][[;#FFF;#000] ][[;#555;#AAA]▓][[;#FFF;#AAA]▒▓█▓▓][[;#555;#000]▌]▐▌[[b;#555;]▐][[;#FFF;]█]▌▐[[b;#555;#AAA]▀]▄[[b;#FFF;#AAA]▄]▀[[b;#FFF;#AAA]█]▌▐[[b;#FFF;#AAA]▓][[;#FFF;#000]██████][[;#FFF;#AAA]▓▒▒]▄ [[b;#FFF;#AAA]░▒▓][[;#FFF;#000]█████][[;#FFF;#AAA]▓▒░][[;#555;#AAA]▀]
                    [[;#555;#AAA]░][[;#FFF;#AAA]▒▓][[;#FFF;#000]████][[;#FFF;#AAA]▓░░]▀[[;#000;]  ][[b;#555;#AAA]▒][[;#FFF;#AAA]▒███▓][[;#000;] ][[b;#FFF;#AAA]░]▌[[b;#555;]▐][[;#FFF;]█][[;#FFF;#AAA]▌][[;#555;#000]▄]▀[[b;#FFF;#AAA]▀▀▀]▀[[b;#555;]▄█][[;#FFF;]█████████][[;#FFF;#AAA]▓▒]▌[[;#000;] ][[b;#FFF;#AAA]░▒▓][[;#FFF;#000]█████][[;#FFF;#AAA]▓░░][[;#555;#000]▄]
                   [[;#555;#000]▐][[;#555;#AAA]░][[;#FFF;#AAA]▒▓][[;#FFF;#000]███][[;#FFF;#AAA]▒]▀[[b;#555;]▄▄▄▄][[;#000;] ][[b;#555;]▀][[;#FFF;#AAA]▓▓██▓][[;#000;] ][[b;#FFF;#AAA]▒]▌[[b;#555;]▐][[;#FFF;]█][[;#FFF;#AAA]▌][[;#555;#000]░▄]▄[[b;#555;]▄▄▄][[;#555;#AAA]▀][[;#FFF;#000]███████████][[;#FFF;#AAA]▓▒][[;#555;#000]▄][[;#000;] ][[b;#FFF;#AAA]░▒][[;#FFF;#000]█████][[;#555;#AAA]░][[;#FFF;#AAA]░][[;#555;#AAA]░][[;#555;#000]▌]
                   [[;#555;#000]▐][[;#555;#AAA]░][[;#FFF;#AAA]▒▓][[;#FFF;#000]██][[;#FFF;#AAA]▓]▌[[b;#555;]▐][[;#555;#AAA]▓▓▓▓▓][[;#555;#000]▄][[;#000;] ][[;#AAA;]▀][[b;#FFF;#AAA]▓█▓][[;#000;] ][[b;#FFF;#AAA]▓]▌[[b;#555;]▐][[;#FFF;]██]▌▐[[b;#FFF;#AAA]▓▓▓][[;#FFF;#000]███][[;#555;#AAA]▄]▀[[b;#555;]▀][[;#000;]  ][[b;#555;]▀]▀▀▀[[b;#555;#AAA]▄▄▄▄▄][[;#000;] ][[b;#FFF;#AAA]░▒▓▓▓][[;#555;#AAA]░░▒▓][[;#555;#000]▄]
                   [[;#555;#000]▐][[;#555;#AAA]░][[;#FFF;#AAA]▒▓][[;#FFF;#000]██][[;#FFF;#AAA]▓][[;#FFF;#000] ][[;#555;#AAA]▓▓▒▒▒▓▓▓][[;#000;] ][[;#AAA;]▀][[b;#FFF;#AAA]▓▓][[;#000;] ][[b;#FFF;#AAA]▓][[;#FFF;#000]█][[;#000;] ][[b;#555;#AAA]▌▄▄][[;#000;] ][[b;#555;#AAA]▄▄▄]▀▀[[b;#555;]▀]                [[b;#555;]▀▀▀][[;#555;#AAA]░░][[;#555;#000]█▄▄]
                   [[;#555;#000]▐][[;#555;#AAA]░][[;#FFF;#AAA]▒▓][[;#FFF;#000]██][[;#FFF;#AAA]▓][[;#FFF;#000] ][[;#555;#AAA]▓▒░░░░▒▓▓][[;#000;]  ][[;#AAA;]▀][[;#000;] ][[;#AAA;]▀]
                   [[b;#555;]▐][[;#555;#AAA]░][[;#FFF;#AAA]▒▓][[;#FFF;#000]█][[;#FFF;#AAA]▓▒][[;#FFF;#000] ][[;#555;#AAA]▒░][[;#FFF;#AAA]░░░░][[;#555;#AAA]░░▓▓]░░
                    [[b;#555;#AAA]░][[;#FFF;#AAA]▒▓▓▒][[;#555;#AAA]░][[;#555;#000] ][[;#555;#AAA]░][[;#FFF;#AAA]░▓][[;#FFF;#000]██][[;#FFF;#AAA]▒░░][[;#555;#AAA]░]▀[[b;#555;]▀]
                    ▐[[b;#FFF;#AAA]░▓▒][[;#555;#AAA]░][[;#555;#000] ][[;#555;#AAA]░][[;#FFF;#AAA]▒▓][[;#FFF;#000]████][[;#FFF;#AAA]▓][[;#555;#AAA]▄][[;#555;#000]▀]
                    [[b;#555;]▐][[;#FFF;#AAA]░▒][[;#555;#AAA]░][[;#555;#000] ][[;#555;#AAA]░][[;#FFF;#AAA]▒▓][[;#FFF;#000]██][[;#FFF;#AAA]▓▒][[;#555;#AAA]▄][[;#555;#000]▀]
                     [[b;#555;#AAA]░░][[;#555;#000] ][[;#555;#AAA]░][[;#FFF;#AAA]▒▓][[;#FFF;#000]█][[;#FFF;#AAA]▓][[;#555;#AAA]▄][[;#555;#000]▀]
                      [[b;#555;#AAA]░][[;#555;#000] ][[;#FFF;#AAA]▒▓▓][[;#555;#AAA]▄][[;#555;#000]▀]
                       [[b;#555;]▀][[;#FFF;#AAA]▓][[;#555;#AAA]▄][[;#555;#000]▀]    [[b;#FFF;] ][[;#000;]  ][[;#AAA;]▄][[b;#555;]▀ ▄▄▄▓█][[;#555;#AAA]▓][[;#555;#000]▀▀][[;#555;#AAA]▓][[;#555;#000]▄ FUEL!   ]▄[[b;#555;#AAA]▒][[;#555;#000]▄]
                                [[b;#555;]   ▀]▀▀▐[[b;#555;#AAA]░][[;#555;#000]▀   ]▐[[b;#FFF;#AAA]░][[;#555;#000]▀]        [[;#555;#AAA]▐][[;#555;#000]▌ ][[;#555;#AAA]▓][[;#555;#000]▌]
                                      [[;#555;#AAA]░][[;#555;#000]▌ ░  ]▀    ▄[[b;#555;#AAA]▓▀][[;#555;#000]▄ ]▐[[b;#555;#AAA]▓][[;#555;#000]░]▐[[b;#FFF;#AAA]░][[;#555;#000]▌]
                                     ▄[[b;#FFF;#AAA]░][[;#555;#AAA]▀]▄[[b;#555;]▄][[;#555;#AAA]▐][[;#555;#000]▌ ]▐[[b;#FFF;#AAA]░][[;#FFF;#000] ][[;#555;#AAA]▐][[;#555;#000]▌ ]▐[[b;#555;#AAA]▓][[;#555;#000] ][[;#555;#AAA]▐][[;#555;#000]▌]▄[[b;#555;#AAA]▒][[;#555;#000]▀]
                                [[b;#555;]  ]▄[[b;#555;#AAA]▄][[;#555;#000]▀]▐[[b;#555;#AAA]▓][[;#555;#000] ]░▐[[b;#555;#AAA]▓][[;#555;#000]░ ][[;#555;#AAA]▐][[;#555;#000]▌]▐[[b;#555;#AAA]░]▄[[b;#555;]▄][[;#555;#AAA]▄][[;#555;#000]▌]▐[[b;#FFF;#AAA]░][[;#555;#AAA]▄][[;#555;#000]▀]
                                [[b;#555;] ]▐[[b;#555;#AAA]▓][[;#555;#000]░ ][[;#555;#AAA]▐][[;#555;#000]▌  ][[;#555;#AAA]░▀]▄[[b;#555;#AAA]▄][[;#555;#000]▀]░[[b;#555;#AAA]░][[;#FFF;#AAA]░]▄[[b;#555;]▄ ▀][[;#555;#AAA]░][[;#555;#000]▌ ▄░]▀
                                [[;#AAA;] ][[b;#555;#AAA]░][[;#555;#000]▌]▄[[b;#555;#AAA]▄][[;#555;#000]▀    ]▀[[b;#555;]▀    ▀▀    ]▀[[b;#555;]▀]
                                [[b;#555;]  ]▀[[b;#555;]▀]
"
`;

exports[`Terminal utils $.terminal.from_ansi should render ANSI art 2`] = `
"


[[b;#555;#000]░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▄▄▄ ▄▄▄ ▒▒▒▒░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░]
[[b;#555;#000]░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ ▒▄▀▐ ▒▒▒▒░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░]
[[b;#555;#000]▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▄▄▒▒ ░░░░░▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒]
[[b;#555;#000]▒▒▒▒▒▒▒▒▒▐▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒ ░░░░░▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒]
[[b;#555;#000]▓▓▓▓▓▓▓▓▀ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒ ░   ░▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓]
[[b;#555;#000]▓▓▓▓▓▓▓▌▐█ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒]     [[b;#555;#000]░▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▀]
[[b;#555;#000]▓▓▓▓▓▓▓ █▐▌▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓░]      [[b;#555;#000]▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▌▐▌]
[[b;#555;#000]▓▓▓▓▓▓▌▐▌▌█ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▀▀ ░]       [[b;#555;#000]▀▀▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓ █]
[[b;#555;#000]▓▓▓▓▓▓ ██▒▐▌▐▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▀▀ ▄▄▀ ░]       [[b;#555;#000]▀▄▄ ▀▀▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▌▐▌▌]
[[b;#555;#000]▓▓▓▓▓▌▐█▀▀ █ ▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒▀ ▄▄▀▀    ░]          [[b;#555;#000]▀▀▄▄ ▀▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓ █▐░]
[[b;#555;#000]▒▒▒▒▒  ▀▀▀▀▀ ▐▒▒▒▒▒▒▒▒▒▒▒▒▀▀ ▄▄▀]               [[b;#555;#000]▀▄▄]     [[b;#555;#000]▀▄▄ ▀▀▒▒▒▒▒▒▒▒▒▒▒▒▒▌▐▓▄▄]
[[b;#555;#000]▒▒▒▒▒▐▀▀▀▀▀▀▀▌▒▒▒▒▒▒▒▒ ][[;#A50;]▄][[;#AAA;]▄▄ ][[b;#555;]▀▀]                     [[b;#555;]▀▀▄▄    ▀▀▄▄ ▀▀▒▒▒▒▒▒▒▒▒  ▀▀▀]
[[b;#555;]░░░░░▌▓▀▀▀▀▀▐▄░░░░░   ][[;#A50;]▐▓][[;#AAA;#A50]░▒][[;#AAA;#000]▌]                           [[b;#555;#000]▀▄▄]     [[b;#555;#000]▀▀▄▄  ░░░░░░▄▀▀▀▀]
[[b;#555;#000]░░░░░░▐▓▓▀ ▀▓▐░░   ▄▀▀ ][[;#A50;]▀▀][[;#AAA;]▌]                               [[b;#555;]▀▀▄▄]     [[b;#555;]▀▄▄   ░░▌▓▀▀▀]
[[b;#555;]░░░░░░▐▒░   ▐▐  ▄▀▀    ][[;#A50;]▐▓][[;#AAA;]▌   ][[b;#555;]░]         [[b;#555;]▄▒  ▀▀ ▀▄▄]            [[b;#555;]▀▀▄▄    ▀▀▄  ░▐▓▓▀]
[[b;#555;]▒▒▒▒▒▒▐░]      [[b;#555;]▀▀]       [[;#A50;]▐▓][[;#AAA;]▌ ][[b;#555;]░░]       [[b;#555;]▄▀    ▐▐▄▌   ▀▀▄]             [[b;#555;]▀▄▄    ▀▀▄▐▒░]
[[b;#555;]▒▒▒▒▒▒▐]          [[b;#555;]▄▒    ][[;#A50;]▐▐▌ ][[b;#555;]░]     [[b;#555;]▄░  ▄░    ▄▄▄  ▐▀  ▀▄]              [[b;#555;]▀▀▄    ▐▒▓▓]
[[b;#555;]▒▒▒▀ ▄▐]       [[b;#555;]▄▒░░░░░   ][[;#A50;]▐][[;#AAA;#A50]░][[;#A50;#000] ][[b;#555;#000]░    ▄░ ▄   ▄ ▀ ▐▌ ▀▀▄  ▄  ▓]                [[b;#555;#000]▀▀▄ ▌░▒▓]
[[b;#555;#000]▀ ▄▄▓▀]      [[b;#555;#000]▄▀░░░░░░░░  ][[;#A50;]▒][[;#AAA;#A50]░]      [[b;#555;#000]░ ▄▐▀ ░    ▐▌    █ ▄▀  ▓]                [[b;#555;#000]▄░ ▐░▒▓]
[[b;#555;#000]█▀▀    ]▄▄[[;#A50;]▄]              [[;#A50;]▓][[;#AAA;#A50]▐]          [[b;#555;#000]▀  ][[;#A50;]▄][[;#AAA;]▄▄  ][[b;#555;]▌    ▐▌    ▐▌]               [[b;#555;]▐▓ ▐░░▒]
      ▐[[;#AAA;#A50]░][[;#A50;#000]▓▀▌▀▓▓█][[;#AAA;#A50]░░▀▀▀▀▀▀][[;#A50;#000]███▒▓▓█][[;#AAA;#A50]▀▀░▀▀▀▀░][[;#A50;#000]▐][[;#AAA;#A50]░][[;#A50;#000]▓░][[;#AAA;#000]▌  ][[b;#555;#000]▀▀▀▀▀▌ ▀▀ ▐▌]                [[b;#555;#000]▓   ░░]
[[b;#555;#000]    ▄  ][[;#A50;]▀░▀]              [[;#A50;]▐][[;#AAA;#A50]░]             [[;#A50;#000]▀▀   ][[b;#555;#000]▌    █ ▄▀  ▓]                 [[b;#555;#000]▒    ░]
[[b;#555;#000] ▄▄▓░]     [[b;#555;#000]░░░░░░░░░░░   ][[;#A50;]▓][[;#AAA;#A50]░]      [[b;#555;#000]░  ▀▀▒ ▀▄▄ ▐▌ ▄▄▀   ▀ ▐▌]                 [[b;#555;#000]░    ░]
[[b;#555;#000]▒▒░░░   ░░░░░░░░   ░░░  ][[;#A50;]▓][[;#AAA;#A50]░]       [[b;#555;#000]░  ▀  ▄▄ ▀▀▀▀  ▐▀▄  ▄▀]                  [[b;#555;#000]░    ░]
[[b;#555;#000]░░░░░   ░░░░░░  ▄▓▄  ░  ][[;#A50;]▓][[;#AAA;#A50]░][[;#A50;#000] ][[b;#555;#000]▒▄]      [[b;#555;#000]▄  ▀▌▐  ▐▀▌  ▀  ▄▀]      [[b;#555;#000]▄▓▄]      [[b;#555;#000]▄▓▄]
[[b;#555;#000]  ░░░ ░ ░░░░░  █▀▄▀▒  ░ ][[;#A50;]▐][[;#AAA;#A50]░][[;#A50;#000] ][[b;#555;#000]▄▀█]       [[b;#555;#000]░ ▄]     [[b;#555;#000]▀  ▄▒▀]       [[b;#555;#000]█▀▄▀▒    █▀▄▀▒]
[[b;#555;#000]    ░ ▒ ░░░░░ ▐▓▀ ▀▓▌ ░ ][[;#A50;]▐][[;#AAA;#A50]░][[;#A50;#000]  ][[b;#555;#000]▀▓▌ ░]         [[b;#555;#000]▀ ▀▀▀]          [[b;#555;#000]▐▓▀ ▀▓▌  ▐▓▀ ▀▓▌]     [[b;#555;#000]░]
[[b;#555;#000]    ░ ▒ ░░░░░ ▐▌░  ▐▌ ░ ][[;#A50;]▐][[;#AAA;#A50]▒][[;#A50;#000]▌  ][[b;#555;#000]▐▌ ░░░░░]                    [[b;#555;#000]▐▌   ▐▌  ▐▌   ▐▌]     [[b;#555;#000]░]
      [[b;#555;#000]▒ ░░░░░ ▐▌░  ▒▌ ░ ][[;#A50;]▐][[;#AAA;#A50]░][[;#A50;#000]▌][[b;#555;#000]░ ░▌ ░░░░░░░░░  ▄▄]            [[b;#555;#000]▐▌░   ▌  ▐▌░  ▐▌]
      [[b;#555;#000]▒ ░░░░░ ▐▌░  ░▌ ░ ][[;#A50;]▐█▌][[b;#555;]░]     [[b;#555;]░░░░]     [[b;#555;]▀  ▀▄]          [[b;#555;]▐▌░   ▌  ▐▌░  ░▌]
      [[b;#555;]▒ ░░░░░ ▐▌░   ▌ ░ ][[;#A50;]▐][[;#AAA;#A50]░][[;#A50;#000]▌][[b;#555;#000]░  ][[;#AAA;#A50]░][[;#AAA;#000]▄]     [[b;#555;#000]▄▓▄]       [[b;#555;#000]░ ░░]      [[b;#555;#000]▐▌░]      [[b;#555;#000]▐▌░   ▌]
      [[b;#555;#000]░ ░░░░░ ▐▌░]     [[b;#555;#000]░ ][[;#A50;]▐][[;#AAA;#A50]░][[;#A50;#000]▌][[b;#555;#000]░  ][[;#A50;]▐▐][[;#AAA;#A50]░][[;#A50;#000]  ][[b;#555;#000]▄▀][[;#A50;]▄][[;#AAA;]▄ ][[b;#555;]▒▄]         [[b;#555;]░░    ▐▌░]     [[b;#555;]▐▐▌]
      [[b;#555;]░ ░░░░░░▐▌▒]     [[b;#555;]░  ][[;#AAA;#A50]░][[;#A50;#000]▌    ▌▐][[;#AAA;#A50]▒][[;#AAA;#000] ][[;#A50;#000]▄▀ ][[;#AAA;#A50]░][[;#AAA;#000]▌ ][[b;#555;#000]▓▌  ][[;#A50;]▄▄][[;#AAA;]▄][[;#AAA;#A50]░][[;#AAA;#000]▌   ][[b;#555;#000]▄▄▌ ▐▌▒]     [[b;#555;#000]▐▐]
[[b;#555;#000]   ░  ░ ░░░░░▐▐▓▀]     [[b;#555;#000]░░ ][[;#AAA;#A50]░][[;#A50;#000]█ ][[b;#555;#000]░░ ][[;#A50;]▐ ][[;#AAA;#A50]▐][[;#A50;#000]▐▌▐▄▐][[;#AAA;#A50]▒][[b;#555;#000] ░ ][[;#A50;]▓▀▀ ▄▌][[;#AAA;#A50]░][[;#AAA;#000] ][[b;#555;#000]▐][[;#555;#A50]▓][[;#555;#000]░▀  ▐▌]
[[;#555;#000]   ░  ░ ░░░░░]          [[;#555;#000]░ ][[;#AAA;#A50]░][[;#A50;#000]█ ][[b;#555;#000]░░  ][[;#A50;]▓▒▄▀▄▀▄][[;#AAA;]▌ ][[b;#555;]▀▌][[;#A50;]▐▌▄▀][[b;#FF5;#A50]░] ▐▌[[b;#555;]▀ ]▄[[;#AAA;#A50]░][[;#AAA;#000]  ][[b;#555;#000]▐░]
[[b;#555;#000]░░░░  ░ ░░░░░░░░░░░░░░░░ ][[;#AAA;#A50]▐░][[;#AAA;#000] ][[b;#555;#000]░░  ][[;#A50;]▄▀▀][[b;#FF5;#A50]░][[;#A50;]▄█▐▀▀▄▄▒▄▄▌▀▐][[;#AAA;]▌][[;#A50;]▄▀][[;#AAA;#A50]░][[;#A50;#000]▀  ][[b;#555;#000]░]
[[b;#555;#000]▒░░░  ░ ░░░░░░░░░░░░░░░░ ][[;#A50;]▐][[;#AAA;#A50]▌][[;#AAA;#000] ][[b;#555;#000]░ ][[;#A50;]▄▀][[;#AAA;#A50]░][[;#A50;#000]▀█▄ ▀▀▀▀▄][[;#AAA;#A50]░][[;#A50;#000]█▄▐█▀▀][[;#AAA;#A50]░][[;#A50;#000]▄▀  ][[b;#555;#000]░░░░░]
[[b;#555;#000] ▀▓░    ░░░░░░░░░░░░░░░░░][[;#A50;]▐][[;#AAA;#A50]▌][[;#AAA;#000]  ][[;#A50;#000]▐ ][[;#AAA;#A50]▒][[;#A50;#000]▌█▀][[;#AAA;#A50]░][[;#A50;#000]▓▓▀▀][[;#AAA;#A50]░][[;#A50;#000]▄▄▄▄ ▀▀▀▀  ][[b;#555;#000]░░░░░░░░░░░░░░]         [[b;#555;#000]▌]
[[b;#555;#000]█▄ ▓  ░ ░░░░░░░░░░░░░░░░░][[;#A50;]▐][[;#AAA;#A50]▌][[;#AAA;#000]  ][[;#A50;#000]▌][[;#AAA;#000]▐][[;#A50;#000]█▐]         [[;#A50;#000]▀▀▀▀█][[;#AAA;#A50]░▒][[;#A50;#000]▌▌  ][[b;#555;#000]░░░░░░░░░░░░░░░░░░░░░ ▌]
[[b;#555;#000]▄▀█]     [[b;#555;#000]░░░░░░░░░░░░░░░░░][[;#A50;]▐][[;#AAA;#A50]▒][[;#A50;#000]▌▐▄][[;#AAA;#A50]░][[;#A50;#000]▄▀▐░ ░▄▒▓][[b;#555;#A50]░░][[;#A50;]█▄▄  ▄ ▄█  ][[b;#555;]░░░░░░░░░░░░░░░░░░░░░ ▌]
[[b;#555;] █▐▌    ░░░░░░░░░░░░░░░░░][[;#A50;]▐][[;#AAA;#A50]░][[;#A50;#000]▌][[;#AAA;#A50]░][[;#A50;#000]▀▀ ][[b;#555;#000]░   ][[;#A50;]▀▀▓][[b;#555;#A50]░░][[;#A50;]██][[;#AAA;#A50]░▒▄][[;#A50;#000]▌ ░ ▌ ][[b;#555;#000]░░░░░░░░░░░░░░░░░░░░░░ ▌]
[[b;#555;#000] ▐▌█    ░░░░░░░░   ░░░░░░][[;#A50;]▐][[;#AAA;#A50]░][[;#A50;#000]▌▌]     [[;#A50;#000]░▓▄▀ ▄███][[b;#555;#A50]░][[;#A50;]▀█▓  ▐ ][[b;#555;]░░░░░░░░   ░░░░░░   ░░░ ▌]
[[b;#555;] ▐▌▓  ░ ░░░░░░  ▄▓▄  ░░   ][[;#AAA;#A50]░][[;#A50;#000]▌▐ ][[b;#555;#000]▄░  ][[;#A50;]▒▓█][[b;#555;#A50]░][[;#A50;]▄][[b;#555;]▄▄][[;#AAA;#A50]░][[;#A50;#000]▌▀▀░   ▌]         [[b;#555;#000]▄▓▄  ░░  ▄▒▄  ░ ▌]
[[b;#555;#000] ▐▌▓  ░ ░░░░░░ █▀▄▀▓ ░  ][[;#A50;]░ ][[;#AAA;#A50]░][[;#A50;#000]▌▀ ▐][[b;#555;#000]▀ ][[;#A50;]▐▓██][[;#AAA;#A50]░][[b;#555;#A50]▒][[;#A50;]▀▐][[;#AAA;#A50]▒][[;#A50;#000]▐][[b;#555;#A50]▀][[;#AAA;#A50]░][[;#AAA;#000]▌  ][[;#A50;#000]▐ ▄▄][[b;#FF5;#A50]░][[;#A50;]█][[;#AAA;#A50]░][[;#A50;#000]▀██▄▄ ][[b;#555;#000]▀▓  ░ █▀▄▀▒ ░ ▌]
[[b;#555;#000] ▐▌▓  ░ ░░░░░ ▐▓▀ ▀▒▌  ][[;#A50;]▒▓ ][[;#AAA;#A50]▐][[;#A50;#000]█]     [[;#A50;#000]░▓▓█][[b;#555;#A50]░][[;#A50;]▄▌▀▀▄][[;#AAA;#A50]░][[;#AAA;#000]▀ ][[b;#555;#000]▐ ][[;#A50;]▌▀▌▀ ▀▐▓][[;#AAA;#A50]▒][[;#A50;#000]▀▄][[b;#FF5;#A50]░][[;#AAA;#A50]░][[;#A50;#000] ][[b;#555;#000]▐▌  ▐▓▀ ▀▓▌  ▌]
[[b;#555;#000]  ▌▒  ░ ░░░░░ ▐▌▒  ▐▌▐][[;#AAA;#A50]░][[;#A50;#000]▀▄ ][[;#AAA;#A50]▐][[;#A50;#000]█ ░    ][[b;#555;#000]░][[;#A50;]▒▓][[b;#555;#A50]░][[;#A50;]▄▄][[b;#555;]▄][[;#A50;]▐][[b;#555;#A50]░][[;#A50;]▀  ][[b;#555;]▒ ][[;#A50;]▌░▓█][[;#AAA;#A50]░][[;#A50;#000]▄▀ ▐█▄▀▀▌ ][[b;#555;#000]▌  ▐▌   ▐▌  ▌]
[[b;#555;#000]  ▌▒  ▒ ░░░░░ ▐▌░   ][[;#A50;]▄▀░▓▌ ][[;#AAA;#A50]▒░]        [[;#A50;#000]▀▓][[;#AAA;#A50]░][[;#AAA;#000]▄][[;#A50;#000]▄▀   ][[b;#555;#000]░▌  ][[;#A50;]▄ ][[b;#555;]▀][[;#A50;]█][[b;#555;#A50]░][[;#A50;]▓░▀][[b;#555;]▄][[;#555;#A50]▒░][[;#A50;]▄▐ ][[b;#555;]▌  ▐▌░  ▐▌  ▌]
[[b;#555;]  ▌▒  ▒ ░░░░░ ▐▌  ][[;#A50;]▄▀ ░▓▀  ][[;#AAA;#A50]░][[b;#555;#A50]░]    [[;#A50;]░]     [[;#A50;]▀▀]     [[b;#555;]▐  ][[;#A50;]▐][[;#AAA;#A50]░][[;#A50;#000]▓][[;#AAA;#A50]▄░][[;#A50;#000]██▒▄ ][[b;#555;#000]▀][[;#A50;]░▀▌ ][[b;#555;]▌  ▐▌    ▌  ▌]
[[b;#555;]  ▌▐  ▓ ░░░░░ ▐  ]▀▄[[;#A50;]▄][[;#AAA;]▀][[;#A50;]▀    ][[b;#555;#A50]░][[;#555;#000]▀    ][[;#A50;]░░][[b;#555;]░ ░░   ░  ░   ▀][[;#555;#A50]▌][[;#AAA;#A50]▒░][[;#A50;#000]█▓▓█▌▄ ▐░ ][[b;#555;#000]▐▌  ▐▒░   ▌  ▌]
[[b;#555;#000]   ▐  ▓ ░░░▒░  ]▄▀▀   [[;#A50;]▄▌ ▄▌][[b;#555;]▄ ][[;#A50;]▄  ░▓░░][[b;#555;]░ ░  ░][[;#555;#A50]░][[;#AAA;#A50]░][[b;#555;#000]░ ][[;#A50;]█    ▄█▓▓░ ▀ ░▀  ][[b;#555;]▓▌  ▐░░   ▌  ▌]
[[b;#555;]   ▐  ▐    ▀  ]▀▄▄[[;#AAA;#A50]▓░][[;#A50;#000]▌▀░ ▐▄ ][[b;#555;#A50]▓][[;#555;#000]▌ ][[;#A50;]▀▌ ▀▓▒][[b;#555;]░░  ][[;#A50;]░▒][[;#AAA;#A50]░][[;#AAA;#000] ][[;#A50;#000]▄▄][[;#AAA;#A50]▒][[;#A50;#000]▀▀   ▀][[b;#555;#000]▀  ][[;#A50;]▄▄▌    ][[b;#555;]░▌ ▐▐ ░   ▌  ▌]
[[b;#555;]   ▐  ▓▌▄▄▄  ]█[[;#AAA;#A50]▓░][[b;#FF5;#A50]░░░][[;#A50;]██▄▄▄  ][[b;#555;#A50]░▓] [[;#A50;]░][[;#AAA;#A50]░][[;#AAA;#000] ][[;#A50;#000]▄▄▀▀  ▀▀░▄▄  ][[;#AAA;#A50]░][[;#AAA;#000] ][[b;#555;#000]▀░   ░][[;#A50;]▄▌▀ ▄][[;#AAA;#A50]░][[;#A50;#000]▌][[;#AAA;#000]▄▄   ][[b;#555;#000]▐▐ ░]      [[b;#555;#000]▌]
      [[b;#555;#000]▐▓▀▀ ]▄[[;#AAA;#A50]▓░░][[b;#FF5;#A50]░░][[;#A50;]█][[b;#555;#A50]░░░░][[;#A50;]▓▓▓▌][[;#AAA;#A50]░][[b;#555;#A50]░] [[;#A50;]▓▌][[;#AAA;#A50]░][[;#AAA;#000]▄  ][[;#A50;#000]▀ ▀▀▀▀ ▄ ▄█][[;#AAA;#A50]░][[;#A50;#000]▄  ][[b;#555;#000]▒ ][[;#A50;]▀▀ ▄▀▀▄][[b;#555;#A50]░][[;#A50;]█][[;#AAA;#A50]▀▓][[;#AAA;#000]▄▄]          [[b;#555;#000]▌]
      [[b;#555;#000]▒   ]▐[[;#AAA;#A50]░░][[;#A50;#000]█][[b;#FF5;#A50]░][[;#A50;]█][[b;#555;#A50]░░░░][[;#A50;]▓][[b;#555;#A50]▄][[;#555;#000]▀][[;#A50;]▄▄ ][[;#AAA;#A50]▐][[;#A50;#000]█  ░▀][[;#AAA;#A50]░▓][[;#AAA;#000]▄][[;#A50;#000]▀▄▀▓][[;#AAA;#A50]▒░][[;#A50;#000]▀ ▄ ][[;#AAA;#000]▄][[;#A50;#000]▀][[;#AAA;#A50]░][[b;#FF5;#A50]░][[;#A50;] ][[b;#555;]▐▓▄][[;#555;#A50]▓][[;#555;#000]▄▄][[;#555;#A50]▓▒][[;#A50;]▓▀▓][[b;#FF5;#A50]░][[;#AAA;#A50]░▓][[b;#FFF;#AAA]░]▌       [[b;#555;]▐ ▌]
[[b;#555;]   ▄  ▒  ]▐[[;#AAA;#A50]░][[b;#555;#A50]░░░░░░][[;#A50;]▒▒▒▓][[b;#555;]▌][[;#A50;]▀][[b;#555;#A50]░][[;#AAA;#A50]░][[;#A50;#000]▀▐][[;#AAA;#A50]░][[;#A50;#000]▐▄   ░][[;#AAA;#A50]░▓][[;#A50;#000]▐][[;#AAA;#A50]░][[;#A50;#000]▐▓▓▌▐▓][[;#AAA;#A50]░][[;#A50;#000]▄][[;#AAA;#A50]▒][[;#AAA;#000]▄][[;#A50;#000]▀   ][[b;#555;#000]▀▄][[;#555;#A50]▓░][[;#A50;]▀▐ ][[b;#555;]▄][[;#555;#A50]░][[;#A50;]▓][[b;#FF5;#A50]░][[;#AAA;#A50]░▓][[;#AAA;#000]█]       [[b;#555;#000]▐ ▌]
[[b;#555;#000] ░░▒  ▒  ][[;#AAA;#A50]░][[b;#FF5;#A50]░][[;#555;#A50]░░░][[;#A50;]▒▒░░▒▒▒▓][[b;#555;#A50]▀▓░][[;#A50;]▓▐][[;#AAA;#A50]░][[;#A50;#000]▌█▓░  ▀░▐▓][[b;#555;#000]▐][[;#A50;]▀░][[b;#555;]░ ][[;#A50;]▀▀▒▓][[;#AAA;#A50]░][[;#A50;#000]█▄ ][[b;#555;#000]▀▀    ]▄[[;#A50;]▄ ][[b;#555;]▀][[;#555;#A50]░][[;#FF5;#A50]░][[;#AAA;#A50]░][[;#AAA;#000]▌][[;#AAA;#A50]░]       [[b;#555;#000]▒ ▌]
[[b;#555;#000]   ▒  ░ ][[;#A50;]▐][[b;#FF5;#A50]░▒][[;#555;#A50]░][[;#A50;]▒░░░▒▒▓▓█▀][[b;#555;#A50]░][[;#FF5;#A50]░][[;#A50;]▀ ▐][[;#AAA;#A50]░][[;#A50;#000]▌▓░  ▄ ▄▌░ ][[b;#555;#000]░]        [[;#A50;]▀ ▄][[;#AAA;#A50]░][[;#A50;#000]▄▀][[b;#FF5;#A50]░][[;#AAA;#A50]▀▀▒░░][[;#A50;#000]██][[;#AAA;#A50]░▒][[;#A50;#000]▐▌][[b;#555;#000]▄▀▄ ▄▀▄▓ ▌]
[[b;#555;#000]   ░  ░ ][[;#A50;]▐][[b;#FF5;#A50]░][[;#A50;]▒░░░░▒▓▓▒▀▄][[b;#FF5;#A50]░][[;#A50;]▀ ][[b;#555;]░░]▄▄[[;#A50;]▄▄][[;#AAA;]▄▄  ][[;#A50;]▀]     [[;#A50;]▄▄▄][[b;#555;#A50]░▒][[;#555;#000]▄▄▄   ]▀[[;#AAA;#A50]▒][[;#A50;#000]▌▀▄][[b;#555;#000]▄░ ][[;#A50;]▀][[b;#555;#A50]░▓][[;#A50;]▀░][[;#AAA;#A50]░][[;#AAA;#000]    ][[b;#555;#000]▀   ▓ ▌]
[[b;#555;#000]   ░  ░ ][[;#A50;]▓][[b;#555;#A50]░][[;#A50;]░░░░▒▓▀▄▓▒▀ ][[;#AAA;]▄▄][[;#AAA;#A50]▓▒░][[b;#FF5;#A50]░][[;#A50;]▄▄][[;#AAA;]▄][[;#A50;]▀▌  ░░▄▐][[b;#555;#A50]▒][[;#555;#000]▌]▀[[;#AAA;#A50]▒][[;#AAA;#000]▄][[b;#555;#000]▄▄░]▄[[;#A50;]▄▄][[b;#555;#AAA]▀]▄▄[[b;#555;]▄   ▀▀▀▓░ ]▀[[;#AAA;#A50]▓][[;#AAA;#000] ][[b;#555;#000]▀▀▀▀▀▀▀▀ ▌]
       [[;#A50;]▐▒░ ░░▒▓▄▓▀ ▄][[;#AAA;#A50]░▒▓▒░░░][[;#A50;#000]▓▄][[;#AAA;#000]▄▄][[;#A50;#000]▀ ▌░▒▀ ][[b;#555;#A50]░▓▓][[;#555;#000]▀▀][[;#A50;]▄▄][[;#AAA;#A50]░▒][[;#A50;#000]▀][[;#AAA;#A50]░▀▓][[b;#FFF;#AAA]▒░]█[[;#A50;]▀▄][[;#AAA;]▄ ][[;#A50;]▀][[;#AAA;]▄▄▄][[;#A50;]▀][[;#AAA;]▀  ][[b;#555;]▄░▒▓▄ ▀▒ ▌]
[[b;#555;]▄  ░   ][[;#A50;]▓░ ░▒▀▓▀ ▄▌▀▒▓▓███][[;#AAA;#A50]░][[b;#FF5;#A50]░][[;#A50;]▄▄][[;#AAA;]▄][[;#A50;]▀▀ ▓][[b;#555;#A50]▒░] [[b;#555;]▐░▀▄][[;#A50;]▄▀▄][[;#AAA;#A50]░▄░▒][[;#A50;#000]▀▀][[;#AAA;#A50]░][[;#AAA;#000]▀▀▄][[;#A50;#000]█▓░▀▄ ][[;#AAA;#A50]▒][[;#AAA;#000]▄][[;#A50;#000]▀▓ ][[b;#555;#000]░   ▀▓▓ ▐ ▌]
[[b;#555;#000]▀▓    ][[;#A50;]▐░ ░ ▄▓▀ ][[;#AAA;]▐][[;#A50;]▌▐  ░░▒▓█▀▀▀ ░▀ ][[b;#555;]░][[;#A50;]▄▀][[b;#FF5;#A50]░][[;#A50;]▌ ][[b;#555;]▀][[;#555;#A50]▀][[;#A50;]▀ ▄▄▀▀▓▒░][[b;#555;]░][[;#A50;]▐▌▄▄][[;#AAA;]▀][[;#AAA;#A50]░][[;#A50;#000]▄░ ][[;#AAA;#000]▀][[;#A50;#000]█▌][[b;#555;#000]░]▄      [[b;#555;]▐▓▌  ▌]
[[b;#555;] ▐█   ][[;#A50;]▒   █▀ ][[;#AAA;]▄▐▀][[;#AAA;#A50]░][[;#A50;#000]▄▀]     [[;#A50;#000]▄  ][[b;#555;#000]▄░  ][[;#AAA;#A50]░][[;#A50;#000]▄ ▀░  ▀▄][[;#AAA;#A50]░][[;#A50;#000]▀▒░ ▄▄][[;#AAA;#000]▄▄][[;#A50;#000]▄ ▀ ▀][[;#AAA;#A50]░][[;#A50;#000]▄▀▄▓▄▌ ▄][[;#AAA;#A50]▒][[;#AAA;#000]▌ ][[b;#555;#000]░  ▄▓▓   ▌]
[[b;#555;#000]▄ ▓▌ ][[;#A50;]▐░▀▄▀ ][[;#AAA;]▄][[;#AAA;#A50]▓][[;#AAA;#000]▌][[;#A50;#000]▌  ▀▓░   ░▐▌ ][[b;#555;#A50]░▓]   [[;#A50;]▀▀ ▄▀][[;#AAA;#A50]░▓░][[;#A50;#000]▄▀▀▀ ▄▄][[;#AAA;#000]▄][[;#A50;#000]░][[;#AAA;#000]▀▀][[;#AAA;#A50]▓░][[;#AAA;#000]▄][[;#A50;#000]▄][[b;#FF5;#A50]░][[;#AAA;#A50]░][[;#A50;#000]▄▀  ▄][[b;#FF5;#A50]░][[;#AAA;#A50]░▀][[;#AAA;#000]▌][[b;#555;#000]▀░▒▓▀  ▒ ▌]
[[b;#555;#000]▐▌▐▌ ][[;#A50;]▌▄▀ ][[;#AAA;]▄][[;#AAA;#A50]▓░][[;#AAA;#000]▐][[;#AAA;#A50]░][[;#AAA;#000] ][[;#A50;#000]░░]     [[;#A50;#000]▐▀ ][[;#AAA;#A50]░][[;#A50;#000]▌█][[b;#555;#A50]░][[;#A50;]▐▄▀ ▄][[;#AAA;#A50]▓▒░][[;#A50;#000]▌▀][[;#AAA;#A50]▒][[;#A50;#000]▒▓▄][[b;#555;#000]░ ][[;#A50;]▄▄▄][[;#AAA;]▀][[;#A50;]▀▀][[;#AAA;#A50]░][[;#A50;#000]█][[b;#555;#A50]░][[;#A50;]▓][[b;#555;#A50]░][[;#AAA;#A50]░░][[;#A50;#000]█ ▀▀▀][[b;#FF5;#A50]░][[;#A50;]▄][[;#AAA;]▀▄    ][[b;#555;]▒░░ ▌]
[[b;#555;] ▓▐▌][[;#A50;]▐▐▀][[;#AAA;]▄][[;#AAA;#A50]▒░][[;#A50;#000]█▀ ▀][[;#AAA;#A50]░][[;#A50;#000]▄▒░░]      [[;#A50;#000]▄ ][[;#AAA;#A50]░][[;#A50;#000]█ ][[b;#555;#000]░  ]▀▄▀[[;#A50;]█▀ ▐▌░▐░][[b;#555;]░ ][[;#A50;]▄▄▀▀▀▀][[b;#555;#A50]░][[;#A50;]▓▒░░▓][[;#AAA;#A50]░][[;#A50;#000]▌][[;#AAA;#A50]▓][[;#AAA;#000]▄][[;#AAA;#A50]▒][[;#AAA;#000]▄▄][[;#AAA;#A50]░][[;#A50;#000]▄][[;#AAA;#000]▀▄   ][[b;#555;#000]░░ ▌]
[[b;#555;#000] ▓▐ ][[;#A50;]▌▌▐][[;#AAA;#A50]▒░][[;#A50;#000]▓][[b;#FF5;#A50]░][[;#A50;]▄    ▀][[b;#555;]░    ][[;#A50;]░▀▀  ][[;#AAA;#A50]░][[;#A50;#000]█  ▄▌▄ ▀ ░▒ ▀▄░▀▀░   ▀▀▀▓▒░░][[b;#555;#000]░░][[;#A50;]▀ ][[;#AAA;#A50]░][[;#AAA;#000]▌][[;#AAA;#A50]░][[;#AAA;#000]▀][[;#AAA;#A50]▓][[;#AAA;#000]▄][[;#A50;#000]▀][[;#AAA;#000]▌][[;#A50;#000]▐][[;#AAA;#000]▌   ][[b;#555;#000]░ ▌]
[[b;#555;#000] ▐  ][[;#A50;]▓▐][[;#AAA;#A50]▒][[;#A50;#000]▄▄▀ ░░]      [[b;#555;#000]░ ][[;#A50;]▄   ▒░▐][[;#AAA;#A50]▌][[;#A50;#000]▌▐][[b;#FF5;#A50]░][[;#A50;]▓▀]      [[;#A50;]▄][[b;#555;]▄][[;#A50;]▀▀▄▄▌]            [[;#A50;]▀][[b;#FF5;#A50]░][[;#A50;]▐▀ ][[;#AAA;#A50]▒][[;#AAA;#000]▌▌][[;#A50;#000]▐][[;#AAA;#000]▌][[;#A50;#000]▐][[;#AAA;#000]▌  ][[b;#555;#000]░ ▌]
[[b;#555;#000] ▓ ][[;#A50;]▐▐][[;#AAA;#A50]░][[;#A50;#000]▄  ▀    ░][[b;#555;#000]░   ░ ][[;#A50;]▐▌ ▀  ▐][[;#AAA;#A50]▌][[;#A50;#000]▌][[;#AAA;#A50]░][[;#A50;#000]▀ ▄▓░][[b;#555;#000]░   ][[;#A50;]▀▓][[b;#555;#A50]▀][[;#A50;]▌]       [[b;#555;]░    ][[;#A50;]▄▄▀░][[b;#555;]░▀  ]▐[[;#AAA;#A50]░][[;#A50;#000]▐][[;#AAA;#000]▌▐ ][[;#A50;#000]▐][[;#AAA;#000]▌   ][[b;#555;#000]▌]
[[b;#555;#000] ▒ ][[;#A50;]▓░▀▀][[b;#FF5;#A50]░][[;#A50;]▓▄]        [[;#A50;]░  ▀▄▄▓▄ ▐][[;#AAA;#A50]▒][[;#A50;#000]▌▐▄][[b;#555;#A50]░░▓][[;#555;#000]▒░░ ░  ][[;#A50;]▀]      [[;#A50;]░░ ░][[b;#555;]░   ░]      [[;#FF5;#A50]░][[;#A50;]▌▐][[;#AAA;#A50]▒][[;#A50;#000]▌][[;#AAA;#000]▌][[;#A50;#000]░▌   ][[b;#555;#000]▌]
[[b;#555;#000] ░ ][[;#A50;]▌▒▌  ▀▒░░]     [[;#A50;]▐▌    ▀▀][[;#AAA;#A50]░][[;#A50;#000]▄▐][[;#AAA;#A50]▒][[;#A50;#000]▌█][[;#AAA;#A50]░░][[;#A50;#000]█][[b;#555;#A50]░▓][[;#555;#000]▀  ][[;#A50;]▄▄▄▄ ▄▄▓▓░▀ ▐▒ ░   ][[b;#555;]▐    ][[;#A50;]▐][[b;#555;#A50]▓] [[b;#555;]░][[;#AAA;#A50]░][[;#A50;#000]▀][[b;#FF5;#A50]░][[;#A50;]▐    ][[b;#555;]▌]
[[b;#555;] ░][[;#A50;]▐][[b;#555;]░ ][[;#A50;]░░]      [[;#A50;]░][[b;#555;]░  ][[;#A50;]█▒ ][[b;#555;]░░    ][[;#A50;]▀▐][[;#AAA;#A50]░][[;#A50;#000]▌▄░▀▀▄▄▄███][[b;#FF5;#A50]░][[;#AAA;#A50]░░][[b;#555;#A50]░░▒][[;#A50;]▀   ▄▓▌][[b;#555;]░][[;#A50;]▒ ▐  ][[b;#555;]░   ▒][[;#A50;]░ ][[b;#555;#A50]▓][[;#A50;]  ▐]     [[b;#555;]▌]
[[b;#555;]  ][[;#A50;]▐][[b;#555;]▒   ][[;#A50;]░░░]      [[;#A50;]▐▓░ ░░][[b;#555;]░░ ][[;#A50;]▄ ▐][[;#AAA;#A50]░][[;#A50;#000]▌ ▀▀▀  ][[b;#555;#000]░][[;#A50;]░ ▄▓▓▀▀▀  ▄▄▀▀▓ ][[b;#555;#A50]▌][[;#A50;]▓ ▐▌ ][[b;#555;]▐▌ ░][[;#A50;]░ ][[b;#555;]░][[;#A50;]▌  ▌]     [[b;#555;]▌]
[[b;#555;]   ][[;#555;#A50]▐]       [[;#555;#000]░    ][[;#AAA;#A50]░][[;#A50;#000]▓][[b;#555;#000]░  ][[;#A50;]░░][[b;#555;#A50]▓][[;#A50;]▓▌ ▐][[;#AAA;#A50]░][[;#A50;#000]▌  ][[b;#555;#000]░ ░░][[;#A50;]▄▓▓█▀▀  ▄▄][[;#AAA;#A50]░][[;#A50;#000]▀ ▐▓][[b;#555;#A50]░] [[b;#555;#A50]▌▒][[;#A50;]▌ ▓  ][[b;#555;]▓ ▌ ░][[;#555;#A50]▌][[;#A50;]▄▓▀    ][[b;#555;]░ ▌]
[[b;#555;] ░ ][[;#A50;]▐][[b;#555;]▌]        [[b;#555;]░ ][[;#A50;]▐▀█▄  ▒▓▄ ▀▀ ][[;#AAA;#A50]░][[;#A50;#000]█  ▄▄▀▀▀    ▄][[;#AAA;#A50]▒░][[;#A50;#000]█▀  ░][[b;#555;#000]░][[;#A50;]█][[b;#555;#A50]▐] [[b;#555;#A50]▌░][[;#AAA;#A50]░][[;#A50;#000]▌▐][[;#AAA;#A50]░][[;#AAA;#000]  ][[b;#555;#000]▀][[;#A50;]▄▄▀▀]      [[b;#555;]░░ ▌]
[[b;#555;] ░  ▐░]      [[b;#555;]░░][[;#A50;]░ ][[b;#555;]▄  ][[;#A50;]▀▄▄▓▓][[b;#555;#A50]░▒▓][[;#A50;] ][[;#AAA;#A50]░][[;#A50;#000]█][[b;#555;#000]░][[;#A50;]▐▌▄▄][[;#AAA;]▄][[;#A50;]▄▄█][[;#AAA;#A50]▀░][[b;#FF5;#A50]▒░][[;#A50;]▀  ░▒][[b;#555;]░ ][[;#AAA;#A50]░][[;#A50;#000]▌ ▐][[b;#555;#A50]░][[;#AAA;#A50]░][[;#A50;#000]▐ ▓][[;#AAA;#000]▌][[;#A50;#000]▓  ▄▐  ][[b;#555;#000]░  ░░░▒ ▌]
[[b;#555;#000] ░    ░░  ░░▒][[;#555;#A50]▓▓][[;#555;#000]▀  ░  ][[;#A50;]▄][[b;#555;]▄][[;#A50;]▀▀][[b;#555;#A50]░░] [[;#AAA;#A50]▐][[;#A50;#000]█][[b;#555;#000]░ ][[;#A50;]▀▀▀ ░▒▄▄][[b;#FF5;#A50]░][[;#A50;]▀  ▄▓▒  ][[;#AAA;#A50]░][[;#A50;#000]█  ░][[;#AAA;#A50]░][[b;#FF5;#A50]░][[;#A50;]▌▌░][[;#AAA;#A50]░][[;#AAA;#000]▌][[;#AAA;#A50]░][[;#AAA;#000] ][[;#A50;#000]░▓    ][[b;#555;#000]▀▀▒▒▓ ▌]
         [[b;#555;#000]▄  ▀▀▄  ░  ][[;#A50;]█][[;#AAA;#A50]░][[;#A50;#000]▓][[b;#555;#000]░ ][[;#A50;]▄  ][[;#AAA;#A50]▐][[;#A50;#000]█  ][[b;#555;#000]░░][[;#A50;]░▒▓][[;#AAA;#A50]░][[b;#FF5;#A50]░][[;#A50;]▀  ▄▓][[b;#555;#A50]░][[;#A50;]▀ ▄][[b;#FF5;#A50]░][[;#AAA;#A50]░][[;#A50;#000]▌ ░][[b;#555;#A50]░][[;#AAA;#A50]░][[b;#FF5;#A50]░][[;#A50;]▌▐ ▓][[;#AAA;#A50]░][[;#AAA;#000] ][[;#AAA;#A50]░][[;#AAA;#000] ][[;#A50;#000]▌ ][[b;#555;#000]▄░▒▓▄ ▀▓ ▌]
           [[b;#555;#000]▀▀▀ ][[;#A50;]▄░ ▄█][[;#AAA;#A50]░][[;#A50;#000]▓░ ▐▒░ ][[;#AAA;#A50]░][[;#A50;#000]█]     [[;#A50;#000]▀▀   ▄][[;#AAA;#A50]░░][[b;#555;#A50]░][[;#A50;]▀ ▄][[b;#FF5;#A50]░][[;#AAA;#A50]░][[;#A50;#000]█  ░][[b;#555;#A50]░][[;#AAA;#A50]░▓][[b;#FF5;#A50]░][[;#A50;]▐ ░][[;#AAA;#A50]░▒][[;#AAA;#000] ][[;#AAA;#A50]▒][[;#AAA;#000] ][[b;#555;#000]░   ▀▓▓ ▐ ▌]
       [[b;#555;#000]░░   ][[;#A50;]▌▄][[;#AAA;#A50]░][[;#A50;#000]▌ ▄█▓▀  ▄][[;#AAA;#A50]░][[;#A50;#000]▓▀ ][[;#AAA;#A50]▐░][[;#AAA;#000] ][[;#A50;#000]░▄▄▀    ▀▀▀▀ ▄█▀▀█  ░▓▀▀][[;#AAA;#000]▀][[;#AAA;#A50]░][[;#A50;#000]▌▌ ░][[b;#FF5;#A50]░][[;#AAA;#A50]▓][[;#A50;#000]▐][[b;#FF5;#A50]░]     [[b;#555;]▐▓▌  ▌]
        [[b;#555;]░░ ][[;#A50;]▐][[;#AAA;#A50]░][[;#A50;#000]▓░ █▓░▀ ▄][[;#AAA;#A50]░][[;#A50;#000]▀  ▄ ][[;#AAA;#A50]▐░][[;#AAA;#000] ][[;#A50;#000]▀    ░ ▄][[b;#555;#A50]░][[;#A50;]▌]     [[;#A50;]▄░]     [[;#A50;]▄   ▀▌ ░▀][[;#AAA;]▀▄][[;#A50;]▐][[;#AAA;#A50]▐][[;#AAA;#000]   ][[b;#555;#000]▄▓▒ ▒ ▌]
         [[b;#555;#000]░  ][[;#A50;]▀░ ][[b;#555;#A50]░][[;#A50;]▓][[b;#555;]░ ][[;#A50;]▄█▀ ▄▄▓░ ][[;#AAA;#A50]▐░][[;#AAA;#000] ][[;#A50;#000]░▓ ░▒ ▄][[;#AAA;#A50]░][[;#A50;#000]▀ ░][[b;#555;#000]░  ][[;#A50;]▐▓▌ ][[b;#555;]░][[;#A50;]░ ▐▒▒░▄ ▐  ][[b;#555;]░ ][[;#A50;]▐▄][[;#AAA;#A50]░][[;#AAA;#000]▓ ][[b;#555;#000]░▒▀ ▄▓ ▌]
         [[b;#555;#000]░    ][[;#555;#A50]▒][[;#555;#000]░  ][[;#AAA;#A50]░][[;#A50;#000]▀ ▒▀▄][[b;#555;#A50]░][[;#A50;]▀  █][[;#AAA;#A50]░][[;#AAA;#000]  ][[;#A50;#000]▓█▄▄][[;#AAA;#A50]░][[b;#FF5;#A50]░][[;#A50;]▀ ▒░   ][[;#AAA;#A50]░][[;#A50;#000]▌ ][[b;#555;#000]░][[;#A50;]░▄  ▒▓][[;#AAA;#A50]░░][[;#A50;#000]▌ ▀▄ ░▄ ▀][[;#AAA;#000]▀▌  ][[b;#555;#000]▄▓▒▒ ▌]
[[b;#555;#000]▄]        [[b;#555;#000]░░  ][[;#555;#A50]░][[;#555;#000]░ ][[;#A50;]▄▀ ░░▄][[;#AAA;#A50]░][[;#A50;#000]▀    █][[;#AAA;#A50]▒][[;#AAA;#000] ][[b;#555;#000]░][[;#A50;]▐▓][[;#AAA;#A50]░][[b;#FF5;#A50]░][[;#A50;]█][[b;#555;]░ ][[;#A50;]▒▒   ][[;#AAA;#A50]░][[;#A50;#000]█  ▓][[;#AAA;#A50]░][[;#A50;#000]█  ▒▓][[b;#FF5;#A50]░][[;#AAA;#A50]▒][[;#AAA;#000]█ ][[;#A50;#000]░▄  ▓][[b;#555;#A50]░][[;#FFF;#000]    ][[;#555;#000]░░░░▒ ▌]
[[;#555;#000]▀▓▄]      [[;#555;#000]░  ][[;#A50;]▐▀▄▀  ▄][[;#AAA;#A50]░][[;#A50;#000]▓▀  ░░░ ▐][[;#AAA;#A50]░][[;#A50;#000]▌ ][[b;#555;#000]░][[;#555;#A50]▓][[;#AAA;#A50]░][[;#A50;#000]█][[b;#555;#000]░ ][[;#A50;]▐▓   ▐][[;#AAA;#A50]▒][[;#AAA;#000]  ][[;#A50;#000]▓][[;#AAA;#A50]░░][[;#A50;#000]▓ ][[b;#555;#000]░][[;#A50;]▓▓][[;#AAA;#A50]░▓][[b;#555;#AAA]░] [[;#A50;]░][[;#AAA;#A50]░][[;#AAA;#000]▌ ][[;#A50;#000]░][[;#AAA;#A50]░][[;#A50;#000]▌]     [[b;#555;#000]░░░ ▌]
[[b;#555;#000]░ ▓▌]       [[;#A50;]▄▀▀  ▄▀▓   ░░░▒▒ ▐][[;#AAA;#A50]░][[;#A50;#000]▌  ][[b;#555;#A50]▒░][[;#A50;]▌ ▐▓   ▐][[b;#FF5;#A50]░][[;#A50;]▌ ▐][[b;#555;#A50]░][[;#A50;]▓▓▌ ][[b;#555;]░][[;#A50;]▓][[b;#555;#A50]░][[;#AAA;#A50]░▒][[b;#555;#AAA]░]▌[[;#A50;]░][[;#AAA;#A50]░▒][[;#AAA;#000] ][[;#A50;#000]░][[;#AAA;#A50]░▒][[;#AAA;#000]▌]      [[b;#555;#000]░ ▌]
[[b;#555;#000]▄ ▐▓]      [[;#A50;]▐▌▄░▀ ▄▀   ░░▒▒▒▓▌▐][[;#AAA;#A50]░][[;#A50;#000]▌ ▐][[b;#555;#A50]░][[;#A50;]▌ ▄▓    ][[;#AAA;#A50]▒][[;#A50;#000]▌  ▓][[b;#555;#A50]░][[;#A50;]▓▓][[b;#555;]░ ░][[;#A50;]▓█][[b;#555;#A50]░][[;#AAA;#A50]░][[b;#555;#AAA]░]▌ [[;#A50;]▓][[;#AAA;#A50]▒][[;#AAA;#000]▌ ][[;#AAA;#A50]░░▓][[b;#555;#000]   ▄    ▌]
[[b;#555;#000]▐▌ █]       [[;#A50;]▀  ▄▀][[b;#555;]░  ][[;#A50;]░░▒▒▒▓▓▓▓▐][[;#AAA;#A50]░][[;#A50;#000]▌ ][[b;#555;#A50]░][[;#A50;]▀░▄▓    ][[;#AAA;#A50]░][[;#A50;#000]█   ][[b;#555;#000]░][[;#555;#A50]░][[;#A50;]▓█  ░▓█][[b;#555;#A50]░][[;#FF5;#A50]░][[;#AAA;#A50]▓][[;#AAA;#000]█ ][[;#A50;#000]░][[;#AAA;#A50]░][[;#AAA;#000]▌ ][[b;#FF5;#A50]░][[;#A50;]▀  ][[b;#555;]▄▀ ▀▄  ▌]
[[b;#555;] ▓ ▓   ░░    ][[;#A50;]▐][[b;#555;]░   ][[;#A50;]░░▒▓▓▓▓][[;#AAA;#A50]░░][[;#A50;#000]▓▐][[;#AAA;#A50]░][[;#A50;#000]▌▐▓░▓▓   ][[b;#555;#000]░][[;#A50;]▐▓   ][[b;#555;]░][[;#A50;]░▒█▓ ][[b;#555;]░][[;#A50;]░██][[b;#555;#A50]░][[;#FF5;#A50]░][[;#AAA;#A50]▒][[b;#555;#AAA]░] [[;#A50;]░][[;#AAA;#A50]░▒][[;#A50;#000] ▌][[;#AAA;#000]▌ ][[b;#555;#000]▐▌▄▀▄▐▌ ▌]
[[b;#555;#000] ▒ ▐   ░░░   ][[;#A50;]▌  ░▄][[;#AAA;#A50]░][[;#A50;#000]▀▓▓][[b;#555;#A50]░░][[;#A50;]█][[;#AAA;#A50]░░][[;#A50;#000]█▐][[;#AAA;#A50]░][[;#A50;#000]▌▒▓▓▓▌   ▐][[;#AAA;#A50]░][[;#A50;#000]▌   ][[b;#555;#000]░][[;#A50;]░▒▌▓  ░▓█][[b;#555;#A50]░][[;#FF5;#A50]░][[;#AAA;#A50]▒][[b;#555;#AAA]░]▌ [[;#A50;]▓][[b;#FF5;#A50]░]▌[[;#A50;]░▀ ][[b;#555;]▒▐▌ ▐▌█ ▌]
[[b;#555;] ░ ▐   ░░░░ ][[;#A50;]▐][[b;#555;]░][[;#A50;]▄][[;#AAA;#A50]░][[;#A50;#000]█▀  ][[b;#FF5;#A50]░][[;#A50;]█][[b;#555;#A50]░][[;#A50;]█][[;#AAA;#A50]░░░][[;#A50;#000]█▐][[;#AAA;#A50]▒][[;#A50;#000]▌░▒▒▌  ][[b;#555;#000]░ ][[;#AAA;#A50]▒][[;#A50;#000]█   ][[b;#555;#000]░][[;#A50;]░░▓ ▓ ][[b;#555;]░][[;#A50;]░▓█][[b;#555;#A50]░][[;#FF5;#A50]░][[;#AAA;#A50]▒][[b;#555;#AAA]░]▌ [[;#A50;]░][[;#AAA;#A50]░▒][[;#AAA;#000]   ][[b;#555;#000]▒▓   ▌▓ ▌]
[[b;#555;#000] ░ ▓   ░░░░  ][[;#A50;]▀][[;#AAA;#A50]░][[;#A50;#000]█ ][[b;#555;#A50]░][[;#A50;]▄][[;#AAA;#A50]░][[b;#555;#A50]░░][[;#A50;]▓][[b;#555;#A50]░][[;#AAA;#A50]░][[;#A50;#000]███▐][[b;#FF5;#A50]░][[;#A50;]▌░▒▌  ][[b;#555;]░ ][[;#A50;]▐][[;#AAA;#A50]░][[;#AAA;#000]   ][[b;#555;#000]░░][[;#A50;]░░▓ ▒ ][[b;#555;]░][[;#A50;]░▓█][[b;#555;#A50]░][[;#AAA;#A50]░▒▓][[;#AAA;#000]█ ][[;#A50;#000]░▓][[b;#FF5;#A50]░]▌  [[b;#555;]▓▌░  ▌▓ ▌]
[[b;#555;] ░ ▒   ░░░░░  ][[;#A50;]▓][[b;#555;]░ ][[;#A50;]██▓▓▓█][[;#AAA;#A50]░][[;#A50;#000]███][[b;#555;#A50]░][[;#A50;]▐][[b;#FF5;#A50]░][[;#A50;]▌░▌    ▐][[;#AAA;#A50]░][[;#A50;#000]▌  ][[b;#555;#000]░░][[;#A50;]░░▒▌▐▒ ░▒▓█][[b;#555;#A50]░][[;#AAA;#A50]░▒▓][[;#AAA;#000]█  ][[;#A50;#000]░][[;#AAA;#A50]░▒][[;#AAA;#000]  ][[b;#555;#000]▓▌░  ▌▒ ▌]
[[b;#555;#000]   ▒   ░░░░░  ][[;#555;#A50]▓] [[;#AAA;#A50]░][[;#A50;#000]▌▓▓▓████][[b;#555;#A50]░░][[;#A50;]▒▐][[b;#FF5;#A50]░][[;#A50;]▌▀    ▐][[;#AAA;#A50]░][[;#A50;#000]▌  ][[b;#555;#000]░░][[;#A50;]░░▒▓▌▐▒  ][[b;#555;]░][[;#A50;]▓██][[b;#555;#A50]░][[;#FF5;#A50]░][[;#AAA;#A50]▓][[b;#555;#AAA]░]▌ [[;#A50;]░▓][[;#AAA;#A50]░][[;#AAA;#000]▌ ][[b;#555;#000]▓▌░  ▌▒ ▌]
[[b;#555;#000]   ░ ░   ░░░ ▐░][[;#555;#A50]▓] [[;#A50;]░▒▓████][[b;#555;#A50]░][[;#A50;]▓▒ ▐][[;#AAA;#A50]░][[;#A50;#000]▌    ▄][[;#AAA;#A50]░][[;#AAA;#000]   ][[b;#555;#000]░░][[;#A50;]░░░░▓▌▐▌  ][[b;#555;]░][[;#A50;]▓█][[b;#555;#A50]░][[;#AAA;#A50]░][[b;#FF5;#A50]░][[;#AAA;#A50]▓][[b;#555;#AAA]░]█  [[;#A50;]░][[b;#FF5;#A50]░][[;#AAA;#A50]▒][[b;#FFF;#000] ][[;#555;#000]▐▌░  ▌▒ ▌]
[[;#555;#000]   ░ ░]       [[;#555;#000]▌▐░][[;#A50;]░▓▓▓███][[;#AAA;#A50]░][[;#A50;#000]▓▓░░▐][[;#AAA;#A50]░][[;#A50;#000]▌  ][[b;#555;#000]▌][[;#A50;]▐][[;#AAA;#A50]░][[;#AAA;#000]   ][[b;#555;#000]░░   ][[;#A50;]░░▓ ][[;#AAA;#A50]░][[;#A50;#000]▌▐ ░▓█][[b;#555;#A50]░][[;#AAA;#A50]░][[b;#FF5;#A50]░][[;#AAA;#A50]▓▓][[;#AAA;#000]█  ][[;#A50;#000]░][[b;#FF5;#A50]░][[;#AAA;#A50]▓][[;#AAA;#000]▌ ][[b;#555;#000]▌░  ▌░ ▌]
     [[b;#555;#000]░]        [[b;#555;#000]▓  ][[;#A50;]█][[;#AAA;#A50]░][[;#A50;#000]██][[;#AAA;#A50]░░][[b;#FF5;#A50]░░][[;#AAA;#A50]░][[;#A50;#000]▓▓▐][[;#AAA;#A50]░][[;#A50;#000]▌ ][[b;#555;#000]░ ][[;#A50;]█▀  ][[b;#555;]░]     [[;#A50;]░░▒ ][[;#AAA;#A50]░][[;#A50;#000] ▌ ░▓][[b;#555;#A50]░][[;#AAA;#A50]░▒▓▓][[b;#FF5;#AAA]░][[;#AAA;#A50]▓][[;#AAA;#000]▌ ][[;#A50;#000]▄▀][[;#AAA;#000]▀▀ ][[b;#555;#000]▌░  ▌░ ▌]
[[b;#555;#000] ░   ░]       [[b;#555;#000]▐░][[;#A50;]▄▀▀ ▀][[;#AAA;#A50]░░▒▓▒░][[;#A50;#000]▀ ▐][[;#AAA;#A50]░][[;#A50;#000]▌  █▀  ][[b;#555;#000]░]     [[;#A50;]░░░▌ █ ▌ ░▓][[b;#555;#A50]░][[;#AAA;#A50]░░][[b;#FF5;#A50]░░][[;#FF5;#AAA]░]█▀ [[;#A50;]▄ ░ ][[b;#555;]▐▌░   ░ ▌]
[[b;#555;]▄▒ ░ ░░]      [[b;#555;]▐ ][[;#A50;]▌ ░ ▐█][[;#AAA;#A50]▀▀][[;#A50;#000]▓▀    ][[;#AAA;#A50]▐][[;#A50;#000]█ ][[;#AAA;#A50]░][[;#A50;#000]▌]        [[;#A50;#000]░░░░ ▐█▄▌ ▒▓][[;#AAA;#A50]░][[;#A50;#000]█▀▀▀  ][[b;#555;#000]░][[;#A50;]▓][[;#AAA;]▌   ][[b;#555;]▓▌]      [[b;#555;]▌]
[[b;#555;]▄▄▄▓ ▒▒▒░░░  ▌ ][[;#A50;]▄▀ ░▓][[;#AAA;#A50]░][[;#A50;#000]█░][[b;#555;#000]░]     [[;#AAA;#A50]▐][[;#A50;#000]█▐▓  ][[b;#555;#000]░]     [[b;#555;#000]░░][[;#A50;]░░░ ][[b;#555;#A50]░][[;#A50;]█▓ ░▓▀▀  ░][[;#AAA;#A50]░][[;#AAA;#000]▌ ][[;#A50;#000]░][[;#AAA;#A50]░▓][[;#AAA;#000] ][[b;#555;#000]░░▓▄▄]     [[b;#555;#000]▌]
[[b;#555;#000]▄▄▄▄▄▄▄▄▄▄▄▄ ▌][[;#AAA;#A50]░][[b;#555;#000]░ ][[;#A50;]░▓▓░░][[b;#555;]░]      [[;#AAA;#A50]░][[;#A50;#000]█▐]           [[b;#555;#000]░][[;#A50;]░  ][[;#AAA;#A50]░][[;#A50;#000]█░ █▀ ▌ ][[b;#555;#000]░][[;#A50;]▓][[;#AAA;#A50]░▓][[;#AAA;#000] ][[;#A50;#000]▓][[;#AAA;#A50]░][[;#AAA;#000]▀ ][[b;#555;#000]▄▄▄▄▄▄▄▄▄▄▌]
[[b;#555;#000] ▄   ▄   ▄  ]▐[[;#A50;]▀][[b;#555;]░  ][[;#A50;]░░]          [[;#AAA;#A50]░][[;#A50;#000]█]             [[;#A50;#000]░ ▐█▓░  ░][[;#AAA;#A50]░][[;#A50;#000]▌ ░▓][[;#AAA;#A50]░▓][[;#AAA;#000] ][[;#A50;#000]█][[;#AAA;#000]▀][[b;#555;#000]▐  ▄   ▄   ▄▌]
[[b;#555;#000]▀ ▀▄▀ ▀▄▀ ▀ ][[;#A50;]▌][[b;#555;]░  ░    ░]     [[b;#555;]░][[;#A50;]▌][[;#AAA;#A50]░▌]             [[;#A50;#000]░ ][[b;#555;#A50]░][[;#A50;]█▒░    ▀ ▓][[b;#555;#A50]░][[;#AAA;#A50]▒][[;#AAA;#000]▀▀][[b;#555;#000]▄ ][[;#555;#A50]▒] [[b;#555;]▀ ▀▄▀ ▀▄▀ ▌]
[[b;#555;]▄▄▄▄▄▄▄▄▄▄ ][[;#A50;]▐ ][[b;#555;]▄░]           [[b;#555;]▓][[;#555;#A50]▒][[;#A50;]▌][[b;#FF5;#A50]░][[;#AAA;#A50]▒]               [[;#AAA;#A50]░][[;#A50;#000]▓░    ▄░▌█▀ ][[b;#555;#000]▐][[;#555;#A50]▓][[;#A50;]▌ ][[b;#555;#A50]░] [[b;#555;]▄▄▄▄▄▄ ▄▄▄▌]
           [[;#A50;]▌][[b;#555;]▐░]     [[b;#555;]░]     [[b;#555;]▒][[;#555;#A50]▓][[;#555;#000]▀ ][[;#A50;]▀][[;#AAA;#A50]░][[;#AAA;#000]  ][[;#A50;#000]░][[b;#555;#000]░]       [[b;#555;#000]░][[;#A50;]░  ][[;#AAA;#A50]░][[;#A50;#000]▓▓▀ ▐][[b;#555;#A50]░][[;#AAA;#A50]░▒][[;#A50;#000] ][[b;#555;#000]▄][[;#A50;]▌][[b;#555;]░▓][[;#555;#A50]░][[;#A50;]▌ ][[;#AAA;#A50]░][[;#AAA;#000] ][[b;#555;#000]░]         [[b;#555;#000]▌]
[[b;#555;#000]▓▀▀▀▀▀▓▓   ][[;#A50;]▌][[b;#555;]▓]           [[b;#555;]░▓  ][[;#A50;]▐▀▀▌]     [[b;#555;]░░░░░][[;#A50;]░▒ ▐▓▀  ▐][[b;#555;#A50]░][[;#A50;]█▀▀ ][[b;#555;#A50]▓][[;#A50;]▌ ░▓▌░][[;#AAA;#A50]░][[;#AAA;#000]    ][[;#A50;#000]▄][[;#AAA;#A50]░][[;#A50;#000]▐ ][[b;#555;#000]▀▒▓▌]
[[b;#555;#000]▒ ░▀▒▄▐   ][[;#A50;]▄][[b;#555;]▀]     [[b;#555;]░]     [[b;#555;]░░    ][[;#A50;]▓▌  ▀][[;#AAA;]▄    ][[b;#555;]░][[;#A50;]░░░▌ ][[b;#555;#A50]░]   [[;#A50;]░▓▀   ][[b;#555;#A50]▓░][[;#AAA;#A50]░][[;#AAA;#000] ][[;#A50;#000]▒][[;#AAA;#A50]░][[;#A50;#000]▌░][[;#AAA;#A50]▒][[;#AAA;#000] ][[;#A50;#000]▄][[;#AAA;#A50]▓░][[;#A50;#000]▀ ▌  ][[b;#555;#000]░▒▌]
[[b;#555;#000]░    ▒▐  ][[;#A50;]▐][[b;#555;]▌    ░░]      [[b;#555;]░]     [[;#A50;]█][[;#AAA;#A50]░][[;#A50;#000]    ▀][[;#AAA;#A50]░][[;#AAA;#000]▄   ][[;#A50;#000]░░]       [[;#A50;#000]▀   ][[b;#555;#000]░][[;#555;#A50]░][[;#A50;]█][[;#AAA;#A50]▒][[;#AAA;#000] ][[;#A50;#000]▒][[;#AAA;#A50]░][[;#A50;#000]▌░▀▐][[;#AAA;#A50]▓][[;#A50;#000]▀  ▐    ][[b;#555;#000]░▌]
[[b;#555;#000]░    ░▐  ][[;#555;#A50]▐]    [[b;#555;]░░]      [[b;#555;]░]     [[;#A50;]▐][[;#AAA;#A50]░░]      [[;#A50;#000]▀][[;#AAA;#A50]▒][[;#AAA;#000]▄]              [[b;#555;#000]░][[;#A50;]▓][[;#AAA;#A50]░▓][[;#AAA;#000] ][[;#A50;#000]▓][[;#AAA;#A50]░][[;#A50;#000]█  ][[;#AAA;#A50]▒][[;#A50;#000]  ][[b;#555;#000]░ ][[;#A50;]▌    ][[b;#555;]░▌]
[[b;#555;]░    ░▐  ][[;#A50;]▌   ][[b;#555;]░▒]             [[;#A50;]█][[;#AAA;#A50]░▓][[;#AAA;#000] ][[b;#555;#000]░]     [[b;#555;#000]░][[;#A50;]█][[;#AAA;#A50]░▓][[;#AAA;#000]▄▄]       [[b;#555;#000]░ ░][[;#A50;]░█][[;#AAA;#A50]░▓][[;#AAA;#000] ][[;#A50;#000]▀   ][[;#AAA;#A50]░][[;#A50;#000]  ░][[b;#555;#000]░ ][[;#A50;]▌    ][[b;#555;]░▌]
[[b;#555;]░]     [[b;#555;]▐ ][[;#A50;]▐ ][[b;#555;]░  ▒]      [[b;#555;]░]       [[;#A50;]▐▒][[;#AAA;]▀  ][[b;#555;]░]      [[;#A50;]▀█][[;#AAA;#A50]▒▓][[b;#FF5;#AAA]░]▄        [[;#A50;]░▓][[;#AAA;#A50]░][[b;#FF5;#AAA]░]▌   [[;#AAA;#A50]░][[;#A50;#000]   ░▄ ░][[;#AAA;#000]▄    ][[b;#555;#000]▌]
[[b;#555;#000]░]     [[b;#555;#000]▐ ▐ ▌ ░▒]     [[b;#555;#000]▓]         [[;#555;#A50]░▓]  [[b;#555;]░░  ░    ][[;#A50;]▀█][[;#AAA;#A50]░▒][[;#AAA;#000]█▄   ][[;#A50;#000]░    ▀][[;#AAA;#000]▀▌  ▐  ][[;#A50;#000]░][[b;#555;#000]░ ][[;#A50;]▒▓█▄][[;#AAA;]▀][[;#A50;]▄▄]
[[b;#555;]░]     [[b;#555;]▐  ▌][[;#A50;]▌][[b;#555;]░▓]     [[;#555;#A50]▓]          [[b;#555;#A50]░][[;#A50;]▌   ][[b;#555;]░░░ ][[;#A50;]▐]      [[;#A50;]█][[;#AAA;#A50]░][[b;#FF5;#AAA]░]▓  [[;#A50;]░][[b;#555;]░]        [[;#A50;]▌   ▒▓█][[b;#FF5;#A50]░][[;#AAA;#A50]░][[;#A50;#000]▀▀▌  ][[b;#555;#000]▌]
      [[b;#555;#000]▐  ][[;#555;#A50]▌] [[b;#555;]▓]     [[;#555;#A50]░]           [[;#A50;]▐▌ ][[b;#555;]░░░   ][[;#A50;]▌  ][[b;#555;]░ ▀▄ ][[;#A50;]▀][[;#AAA;#A50]░▒][[;#AAA;#000]▓ ][[;#A50;#000]▓][[b;#555;#000]░░  ░   ][[;#A50;]▐ ░][[b;#555;]░][[;#A50;]▄█][[b;#FF5;#A50]░][[;#AAA;#A50]░][[;#A50;#000]▀  ▐   ][[b;#555;#000]▌]
         [[;#A50;]▌][[b;#555;]▐    ][[;#A50;]▄▀]            [[;#A50;]▐ ][[b;#555;]░░   ][[;#A50;]░▓  ][[b;#555;]▐    ▀▄][[;#A50;]▐][[;#AAA;#A50]▀▓][[;#AAA;#000]▌][[;#A50;#000]▐][[b;#555;#A50]░][[;#555;#000]░]      [[;#A50;]▌░▒▓][[b;#555;#A50]░][[;#AAA;#A50]░][[;#AAA;#000]▀  ][[;#A50;#000]░ ▐  ][[b;#555;#000]░▌]
[[b;#555;#000]    ░    ][[;#555;#A50]░][[;#555;#000]▌   ][[;#555;#A50]░]            [[b;#555;]░ ][[;#A50;]▐]     [[;#A50;]░▓▌  ][[b;#555;]░]      [[b;#555;]▌][[;#A50;]▓][[;#AAA;#A50]░▓][[;#A50;#000]▐▓][[b;#555;#A50]▓][[;#555;#000]░    ][[;#A50;]▐ ▒▓][[b;#555;#A50]░]▀   [[;#A50;]░░  ▌ ][[b;#555;]░▌]
[[b;#555;]    ░   ][[;#A50;]░▌   ▓]          [[b;#555;]░░░]     [[;#A50;]▄▄ ▓▓]     [[b;#555;]▀▀▄   ][[;#A50;]▐][[;#AAA;#A50]░▓][[;#A50;#000] █][[b;#555;#A50]░][[;#555;#000]░░   ][[;#A50;]▐▐▓][[;#AAA;#A50]░][[;#AAA;#000]▀  ][[;#A50;#000]░][[b;#555;#000]░ ][[;#A50;]▓█▄▀][[;#AAA;]▄]
[[;#AAA;]   ][[b;#555;]░░   ][[;#A50;]▓  ▄▀]                [[;#AAA;#A50]▓░][[;#A50;#000]▄▀][[;#AAA;#000]▐][[;#A50;#000]▌▀   ][[b;#555;#000]▌]      [[b;#555;#000]░  ][[;#AAA;#A50]░▒][[;#AAA;#000]▌][[;#A50;#000]▐][[b;#555;#A50]░▓][[;#555;#000]░░  ][[;#A50;]▌▓][[;#AAA;#A50]░][[;#AAA;#000]▌ ][[;#A50;#000]░ ▓▓][[b;#555;#A50]░░][[;#FF5;#A50]░][[;#AAA;#A50]░░][[;#A50;#000]▄█▄]
[[;#A50;#000]   ][[b;#555;#000]░▒  ][[;#A50;]▐  ▄▀]           [[;#AAA;]▄ ][[b;#555;]▄ ▀▀]▐[[;#AAA;#A50]▒░][[;#A50;#000]▌▀▄▌  ][[b;#555;#000]░]        [[b;#555;#000]▌ ][[;#A50;]█][[;#AAA;#A50]░][[;#AAA;#000]▌ ][[;#A50;#000]▀▓░][[b;#555;#000]░ ][[;#A50;]▐▓][[;#AAA;#A50]░][[;#AAA;#000]▌][[;#A50;#000]░░▓][[b;#555;#A50]░][[;#A50;]█][[b;#FF5;#A50]░][[;#AAA;#A50]░][[;#AAA;#000]▀▀][[;#A50;#000]▀  ▌]
[[;#A50;#000]  ][[b;#555;#000]░░▓  ][[;#A50;]▓░▌]        [[b;#555;]░   ][[;#A50;]▐][[;#AAA;]▌][[b;#555;]▀   ▀ ][[;#AAA;#A50]░][[;#A50;#000]█▒][[;#AAA;#A50]░][[;#A50;#000]▀][[;#AAA;#A50]░]      [[b;#555;#000]▄▄    ][[;#A50;]░▓][[;#AAA;#A50]░][[;#A50;#000]    ▀░][[b;#555;#000]░][[;#A50;]▐][[;#AAA;#A50]░▓][[;#A50;#000] ▒█][[;#AAA;#A50]░▒][[;#AAA;#000]▀▀  ][[b;#555;#000]░][[;#A50;]░ ▐ ][[b;#555;]▌]
[[b;#555;] ░░▒  ][[;#A50;]░][[;#AAA;#A50]░][[;#A50;#000]▌]      [[b;#555;#000]░][[;#A50;]░]      [[;#A50;]▀][[;#AAA;#A50]░][[;#A50;#000]▄][[b;#555;#000]▀   ][[;#A50;]▐][[;#AAA;#A50]░][[;#A50;#000]▐][[;#AAA;#A50]▒][[;#A50;#000]▌▄▌▐]      [[b;#555;#000]▀▀▄ ][[;#A50;]▐][[;#AAA;#A50]░▒]       [[;#A50;#000]▐][[b;#FF5;#A50]░]▌[[;#A50;]█][[;#AAA;#A50]░▄][[;#AAA;#000]▀  ][[;#A50;#000]░░][[b;#555;#A50]░░][[;#A50;]▓ ▌ ][[b;#555;]▌]
[[b;#555;]    ]▄▐[[;#AAA;#A50]░][[;#A50;#000]▒  ▄▄ ▀]           [[;#A50;#000]▐▌][[b;#555;#000]▀  ][[;#A50;]▄▌▒ ][[b;#FFF;]▄][[;#A50;]▐][[b;#FF5;#A50]░] [[;#A50;]▒▄]       [[;#A50;]▐][[;#AAA;#A50]░▒][[;#AAA;#000]▓]        [[;#A50;#000]█][[;#AAA;#A50]░▒][[;#AAA;#000]▀ ][[;#A50;#000]▄][[;#AAA;#A50]░░][[;#A50;#000]▓][[b;#FF5;#A50]░][[;#AAA;#A50]▄░░][[;#A50;#000]▌▀][[;#AAA;#000]▄][[;#A50;#000]▄]
[[;#A50;#000]   ][[;#AAA;#000]▀][[;#AAA;#A50]▓][[;#AAA;#000]▄ ][[;#AAA;#A50]░][[;#A50;#000]▀▀]            [[;#A50;#000]▄░  ▀░▒▓▀▐▌▄▄▀▄▌ ▀▀▄    ░][[;#AAA;#A50]░▒▓]       [[;#A50;#000]▄▄▐][[;#AAA;#A50]░▒▓▓][[;#AAA;#000]▀▀▄][[;#A50;#000]▄▀▀▀][[;#AAA;#000]▀▀][[;#A50;#000]▀▀▀][[;#AAA;#A50]░][[;#A50;#000]▀▀]
[[;#A50;#000]  ][[b;#555;#000]░ ][[;#A50;]▄][[;#AAA;]▀▀ ░]         [[;#A50;]▄▄▀▀]     [[;#A50;]▐▓▄░▀▄▄▄][[;#AAA;#A50]░][[;#A50;#000]▌ ▀][[;#AAA;#A50]░][[;#A50;#000]▌   ][[b;#555;#000]▄▌][[;#A50;]▄][[;#AAA;#A50]░][[;#A50;#000]▀][[;#AAA;#000]▀][[b;#555;#000]░   ][[;#A50;]▄▄▓▀█ ▐][[;#AAA;#A50]░][[;#AAA;#000]▀    ▀][[;#AAA;#A50]░][[;#A50;#000]█▓▒▄▀▀▀]
[[;#A50;#000]    ▐][[b;#FF5;#A50]░][[;#AAA;#A50]░][[;#AAA;#000]▄][[;#A50;#000]▄▄▄   ▄▄▄▓░    ░░   ░▌ ▌ ▀▀▒▄▓▄ ▀  ][[b;#555;#000]░▒]     [[;#A50;]▄ ░▓█▀▄▓▀▌▀ ▄▓█▄   ▀][[;#AAA;#A50]░]
[[;#A50;]  ][[;#AAA;]▄][[;#AAA;#A50]▒][[;#A50;#000]▌][[;#AAA;#000]▀][[;#AAA;#A50]▒][[;#AAA;#000]▄][[;#A50;#000]▄ ▀▀▀][[;#AAA;#A50]░][[;#A50;#000]▓▓▒░  ▄▒░░  ░ ▐ ▐ ░▒▌▐░ ▀][[;#AAA;#A50]░][[;#A50;#000]▄][[;#AAA;#000]▄]      [[;#A50;#000]▄][[;#AAA;#A50]░][[;#A50;#000]▌▄▀▄▌▐][[;#AAA;#A50]░][[;#AAA;#000] ][[;#A50;#000]▐][[;#AAA;#A50]░][[;#A50;#000]▌ ░▄▓][[;#AAA;#A50]░][[;#AAA;#000]▌]
[[;#AAA;#000] ][[;#AAA;#A50]▓][[;#AAA;#000]▀][[;#A50;#000]▀▄ ][[;#AAA;#000]▀▌▀][[;#A50;#000]▀▓▄▄   ▄▄▓▒▀  ▄][[;#AAA;#A50]░][[;#A50;#000]▀   ░▌▐ █▒ ▀▄▄ ▀][[;#AAA;#A50]▒░][[;#A50;#000]▀  ▄▓▀ ▐][[;#AAA;#A50]░][[;#A50;#000]░▐][[;#AAA;#A50]░][[;#AAA;#000] ][[;#A50;#000]▀▌░▀ ▄▒▓][[;#AAA;#A50]░▒][[;#AAA;#000]▄▌ ][[b;#555;#000]░░░ ░]
[[b;#555;#000]  ][[;#A50;]░▓▄▄▄ ][[;#AAA;]▀▄▄▄ ][[;#A50;]▀▀▀▀  ▄▄][[;#AAA;#A50]░][[;#A50;#000]▀    ][[b;#555;#000]░   ][[;#A50;]░ ▐▄▒▄  ▀▀ ▄▄][[b;#FF5;#A50]░][[;#A50;]▐][[;#AAA;#A50]░][[;#A50;#000]▄▓▒ ▌  ▄▄▄  ▄▓▀▐▓ ▀][[;#AAA;#A50]░▒][[;#AAA;#000]  ][[b;#555;#000]░]
[[b;#555;#000] ][[;#A50;]░ ▀   ▀▀ ][[;#AAA;]▀▀▀▀][[;#A50;]▀][[;#AAA;]▀][[;#A50;]▀▀▀▀]     [[b;#555;]░░]     [[;#A50;]░  ▀▐▓▒░ ▀▓][[;#AAA;#A50]░][[;#A50;#000]▌][[;#AAA;#A50]░][[;#A50;#000]▀▀▀   ▄▀][[;#AAA;#A50]░][[;#AAA;#000] ][[;#AAA;#A50]░][[;#A50;#000]▀▄ ▐▀  ▀ ▀]
                                      [[;#A50;#000]▀▀▀]          [[;#A50;#000]▐▌▐▌▐▌▀▓▒▄▀ ░ ▄▓]
                                                    [[;#A50;#000]▀ ▀ ▀  ▀]     [[;#A50;#000]▄▀ ][[b;#555;#000]bs]
                                                                    [[;#000;]░░▒▓]
"
`;

exports[`Terminal utils $.terminal.less should split image 1`] = `
"xxx

[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]
[[@;;;;data:image/jpg;<BLOB>]]

xxx
~
~"
`;

exports[`Terminal utils $.terminal.parse_arguments should create array of arguments and convert types 1`] = `
Array [
  "foo bar",
  "baz",
  /\\^asd \\[x\\]/,
  "str str",
  10,
  10000000000,
  "",
  "foobar",
  "foo",
]
`;

exports[`Terminal utils $.terminal.parse_command should handle JSON inside string 1`] = `
Object {
  "args": Array [
    "{\\"wrap\\": true}",
  ],
  "args_quotes": Array [
    "\\"",
  ],
  "command": "test \\"{\\\\\\"wrap\\\\\\": true}\\"",
  "name": "test",
  "rest": "\\"{\\\\\\"wrap\\\\\\": true}\\"",
}
`;

exports[`Terminal utils $.terminal.parse_command should handle JSON inside string 2`] = `
Object {
  "args": Array [
    "{\\"wrap\\": true}",
  ],
  "args_quotes": Array [
    "'",
  ],
  "command": "test '{\\"wrap\\": true}'",
  "name": "test",
  "rest": "'{\\"wrap\\": true}'",
}
`;

exports[`Terminal utils $.terminal.parse_command should handle JSON inside string 3`] = `
Object {
  "args": Array [
    "xxx\\"xxx\\"xxx",
    "y",
  ],
  "args_quotes": Array [
    "\\"",
    "",
  ],
  "command": "test \\"xxx\\\\\\"xxx\\\\\\"xxx\\" y",
  "name": "test",
  "rest": "\\"xxx\\\\\\"xxx\\\\\\"xxx\\" y",
}
`;

exports[`Terminal utils $.terminal.parse_command should handle JSON string 1`] = `
Object {
  "args": Array [
    "[error]}",
  ],
  "args_quotes": Array [
    "",
  ],
  "command": "{\\"demo\\": [\\"error\\"]}",
  "name": "{\\"demo\\":",
  "rest": "[\\"error\\"]}",
}
`;

exports[`Terminal utils $.terminal.parse_command should split and parse command 1`] = `
Object {
  "args": Array [
    "foo bar",
    "baz",
    /\\^asd \\[x\\]/,
    "str str",
    10,
    10000000000,
    "",
    "foobar",
    "foo",
  ],
  "args_quotes": Array [
    "\\"",
    "",
    "",
    "",
    "",
    "",
    "\\"",
    "",
    "'",
  ],
  "command": "test \\"foo bar\\" baz /^asd [x]/ str\\\\ str 10 1e10 \\"\\" foo\\"bar\\" 'foo'",
  "name": "test",
  "rest": "\\"foo bar\\" baz /^asd [x]/ str\\\\ str 10 1e10 \\"\\" foo\\"bar\\" 'foo'",
}
`;

exports[`Terminal utils $.terminal.split_arguments should create array of arguments 1`] = `
Array [
  "foo bar",
  "baz",
  "/^asd [x]/",
  "str str",
  "10",
  "1e10",
  "",
  "foo\\"bar\\"",
  "foo",
]
`;

exports[`Terminal utils $.terminal.split_command Should split command 1`] = `
Object {
  "args": Array [
    "foo bar",
    "baz",
    "/^asd [x]/",
    "str str",
    "10",
    "1e10",
    "",
    "foo\\"bar\\"",
    "foo",
  ],
  "args_quotes": Array [
    "\\"",
    "",
    "",
    "",
    "",
    "",
    "\\"",
    "",
    "'",
  ],
  "command": "test \\"foo bar\\" baz /^asd [x]/ str\\\\ str 10 1e10 \\"\\" foo\\"bar\\" 'foo'",
  "name": "test",
  "rest": "\\"foo bar\\" baz /^asd [x]/ str\\\\ str 10 1e10 \\"\\" foo\\"bar\\" 'foo'",
}
`;

exports[`Terminal utils $.terminal.split_equal split emoji encoded from apply_formatters 1`] = `
Array [
  "ZZZZZZz",
  "[[;;;emoji relaxed;☺️]☺️]oo&nbsp;bar&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[[;;;emoji relaxed;☺️]☺️]a[[;;;emoji eight;8️⃣]8️⃣]",
  "foo&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;b&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;baz",
  "foobar&nbsp;&nbsp;ba&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;br",
]
`;
